auto publishing updates to notebooks

--- a/aiyagari_jax.ipynb
+++ b/aiyagari_jax.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "30c76a7d",
+   "id": "41319e78",
    "metadata": {},
    "source": [
     "# The Aiyagari Model"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d4f1f5a",
+   "id": "477bf0e3",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4879f9c",
+   "id": "9d33154c",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "06749913",
+   "id": "0b185dd3",
    "metadata": {},
    "source": [
     "### References\n",
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9122d7a0",
+   "id": "59199b0b",
    "metadata": {},
    "source": [
     "### Preliminaries\n",
@@ -75,23 +75,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c61ea892",
+   "id": "38d51d32",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
-    "import time\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import jax\n",
     "import jax.numpy as jnp\n",
+    "from time import time\n",
     "from collections import namedtuple"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "8e329dfc",
+   "id": "520f9d87",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b26d1804",
+   "id": "6dff2ccc",
    "metadata": {
     "hide-output": false
    },
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "077853db",
+   "id": "28af6cf6",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -120,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43692350",
+   "id": "93663f71",
    "metadata": {
     "hide-output": false
    },
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63fb91f6",
+   "id": "e6e02f1d",
    "metadata": {},
    "source": [
     "We will use the following function to compute stationary distributions of stochastic matrices.  (For a reference to the algorithm, see p. 88 of [Economic Dynamics](https://johnstachurski.net/edtc).)"
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dfaf1916",
+   "id": "804e71e4",
    "metadata": {
     "hide-output": false
    },
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9fbbd8a9",
+   "id": "e58948bb",
    "metadata": {},
    "source": [
     "## Firms\n",
@@ -199,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4592472",
+   "id": "3570883c",
    "metadata": {
     "hide-output": false
    },
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c29e36f3",
+   "id": "dd0df3cc",
    "metadata": {},
    "source": [
     "From the first-order condition with respect to capital,\n",
@@ -228,14 +228,14 @@
     "\n",
     "<a id='equation-equation-aiy-rgk'></a>\n",
     "$$\n",
-    "r = A \\alpha  \\left( \\frac{N}{K} \\right)^{1 - \\alpha} - \\delta \\tag{18.1}\n",
+    "r = A \\alpha  \\left( \\frac{N}{K} \\right)^{1 - \\alpha} - \\delta \\tag{17.1}\n",
     "$$"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "774b1b32",
+   "id": "2f97d0e3",
    "metadata": {
     "hide-output": false
    },
@@ -252,24 +252,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8ef0654",
+   "id": "77a53100",
    "metadata": {},
    "source": [
-    "Using [(18.1)](#equation-equation-aiy-rgk) and the firm’s first-order condition for labor,\n",
+    "Using [(17.1)](#equation-equation-aiy-rgk) and the firm’s first-order condition for labor,\n",
     "\n",
     "we can pin down the equilibrium wage rate as a function of $ r $ as\n",
     "\n",
     "\n",
     "<a id='equation-equation-aiy-wgr'></a>\n",
     "$$\n",
-    "w(r) = A  (1 - \\alpha)  (A \\alpha / (r + \\delta))^{\\alpha / (1 - \\alpha)} \\tag{18.2}\n",
+    "w(r) = A  (1 - \\alpha)  (A \\alpha / (r + \\delta))^{\\alpha / (1 - \\alpha)} \\tag{17.2}\n",
     "$$"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50126869",
+   "id": "ad712e37",
    "metadata": {
     "hide-output": false
    },
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e042d87",
+   "id": "f62cc897",
    "metadata": {},
    "source": [
     "## Households\n",
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37adb136",
+   "id": "fa23740e",
    "metadata": {},
    "source": [
     "### Primitives and Operators\n",
@@ -345,7 +345,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3460cf5",
+   "id": "a732646f",
    "metadata": {
     "hide-output": false
    },
@@ -376,7 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c483d1a",
+   "id": "cbcb2151",
    "metadata": {
     "hide-output": false
    },
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f721836e",
+   "id": "28f4b29c",
    "metadata": {},
    "source": [
     "This is the vectorized version of the right-hand side of the Bellman equation\n",
@@ -404,7 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47779c95",
+   "id": "c9d703cb",
    "metadata": {
     "hide-output": false
    },
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3127f828",
+   "id": "473e8ae9",
    "metadata": {},
    "source": [
     "The next function computes greedy policies."
@@ -444,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61994c48",
+   "id": "159fdf55",
    "metadata": {
     "hide-output": false
    },
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74caf824",
+   "id": "d753aec6",
    "metadata": {},
    "source": [
     "We need to know rewards at a given policy for policy iteration.\n",
@@ -477,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0351e53c",
+   "id": "dd2fae5f",
    "metadata": {
     "hide-output": false
    },
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "482d3873",
+   "id": "bcb2897b",
    "metadata": {},
    "source": [
     "The value $ v_{\\sigma} $ of a policy $ \\sigma $ is defined as\n",
@@ -530,7 +530,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91b9d008",
+   "id": "bd1f2deb",
    "metadata": {
     "hide-output": false
    },
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0c1b954",
+   "id": "56874760",
    "metadata": {},
    "source": [
     "The next function computes the lifetime value of a given policy."
@@ -568,7 +568,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28946bec",
+   "id": "8b9d1046",
    "metadata": {
     "hide-output": false
    },
@@ -589,7 +589,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ecfed41",
+   "id": "17aec5f7",
    "metadata": {},
    "source": [
     "## Solvers\n",
@@ -600,7 +600,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bf05d606",
+   "id": "8a168578",
    "metadata": {
     "hide-output": false
    },
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f1f600e",
+   "id": "ee87098b",
    "metadata": {},
    "source": [
     "As a first example of what we can do, let’s compute and plot an optimal accumulation policy at fixed prices."
@@ -642,7 +642,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f16469f",
+   "id": "c603ca26",
    "metadata": {
     "hide-output": false
    },
@@ -655,24 +655,49 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6dfb178",
+   "id": "f110cc4e",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
     "%%time\n",
-    "\n",
-    "σ_star = policy_iteration(household, verbose=True)\n",
-    "\n",
-    "\n",
-    "# The next plot shows asset accumulation policies at different values of the exogenous state."
+    "σ_star = policy_iteration(household, verbose=True).block_until_ready()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "56744e5d",
+   "metadata": {},
+   "source": [
+    "We run it again to get rid of compile time."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "599524f4",
+   "id": "fcaabbf4",
+   "metadata": {
+    "hide-output": false
+   },
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "σ_star = policy_iteration(household, verbose=True).block_until_ready()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "32fd8e64",
+   "metadata": {},
+   "source": [
+    "The next plot shows asset accumulation policies at different values of the exogenous state."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "91f62a28",
    "metadata": {
     "hide-output": false
    },
@@ -694,7 +719,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f4fdcef",
+   "id": "05e15cc7",
    "metadata": {},
    "source": [
     "### Capital Supply\n",
@@ -713,7 +738,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "191c053f",
+   "id": "11d998a7",
    "metadata": {
     "hide-output": false
    },
@@ -752,7 +777,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89ad868f",
+   "id": "412a154a",
    "metadata": {},
    "source": [
     "Let’s give this a test run."
@@ -761,7 +786,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7110546e",
+   "id": "a58b5832",
    "metadata": {
     "hide-output": false
    },
@@ -776,7 +801,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a2f6284",
+   "id": "88e06cdb",
    "metadata": {},
    "source": [
     "The distribution should sum to one:"
@@ -785,7 +810,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e507e94",
+   "id": "218a9cb6",
    "metadata": {
     "hide-output": false
    },
@@ -796,7 +821,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0939f905",
+   "id": "73dfeb20",
    "metadata": {},
    "source": [
     "Now we are ready to compute capital supply by households given wages and interest rates."
@@ -805,7 +830,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f86246af",
+   "id": "4862e58f",
    "metadata": {
     "hide-output": false
    },
@@ -834,7 +859,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fdbba64d",
+   "id": "1c9d8bf3",
    "metadata": {},
    "source": [
     "## Equilibrium\n",
@@ -858,7 +883,7 @@
     "In practice, once parameter values are set, we can check for an SREE by the following steps\n",
     "\n",
     "1. pick a proposed quantity $ K $ for aggregate capital  \n",
-    "1. determine corresponding prices, with interest rate $ r $ determined by [(18.1)](#equation-equation-aiy-rgk) and a wage rate $ w(r) $ as given in [(18.2)](#equation-equation-aiy-wgr).  \n",
+    "1. determine corresponding prices, with interest rate $ r $ determined by [(17.1)](#equation-equation-aiy-rgk) and a wage rate $ w(r) $ as given in [(17.2)](#equation-equation-aiy-wgr).  \n",
     "1. determine the common optimal savings policy of the households given these prices  \n",
     "1. compute aggregate capital as the mean of steady state capital given this savings policy  \n",
     "\n",
@@ -870,7 +895,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5775e45",
+   "id": "22d9d56c",
    "metadata": {},
    "source": [
     "### Visual inspection\n",
@@ -885,7 +910,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d8f94ed9",
+   "id": "af1b2b58",
    "metadata": {
     "hide-output": false
    },
@@ -903,7 +928,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e01c7e8f",
+   "id": "b525a728",
    "metadata": {
     "hide-output": false
    },
@@ -922,7 +947,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b6bdded6",
+   "id": "de3eb333",
    "metadata": {
     "hide-output": false
    },
@@ -942,7 +967,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2475d68e",
+   "id": "e6a8a220",
    "metadata": {},
    "source": [
     "Here’s a plot of the excess demand function.\n",
@@ -953,7 +978,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79a9e861",
+   "id": "18651b03",
    "metadata": {
     "hide-output": false
    },
@@ -969,14 +994,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "216e9138",
+   "id": "215f38ea",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
     "%%time\n",
-    "\n",
     "num_points = 50\n",
     "k_vals = np.linspace(4, 12, num_points)\n",
     "out = [excess_demand(k, firm, household) for k in k_vals]"
@@ -985,7 +1009,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "deb08d2d",
+   "id": "ae5df8ac",
    "metadata": {
     "hide-output": false
    },
@@ -1001,7 +1025,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c5eef6b",
+   "id": "3b52ac80",
    "metadata": {},
    "source": [
     "### Computing the equilibrium\n",
@@ -1015,7 +1039,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d7622829",
+   "id": "d91c0202",
    "metadata": {
     "hide-output": false
    },
@@ -1042,7 +1066,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e70a8733",
+   "id": "31969898",
    "metadata": {},
    "source": [
     "Now we call the bisection function on excess demand."
@@ -1051,7 +1075,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8cbe973c",
+   "id": "8526c747",
    "metadata": {
     "hide-output": false
    },
@@ -1059,24 +1083,25 @@
    "source": [
     "def compute_equilibrium(firm, household):\n",
     "    print(\"\\nComputing equilibrium capital stock\")\n",
-    "    start = time.time()\n",
     "    solution, count = bisect(excess_demand, 6.0, 10.0, firm, household)\n",
-    "    elapsed = time.time() - start\n",
-    "    print(f\"Computed equilibrium in {count} iterations and {elapsed} seconds\")\n",
+    "\n",
+    "    start = time()\n",
+    "    solution, count = bisect(excess_demand, 6.0, 10.0, firm, household)\n",
+    "    bisect_without_compile = time() - start\n",
+    "    print(f\"Computed equilibrium in {count} iterations and {bisect_without_compile} seconds\")\n",
     "    return solution"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f28bd8f4",
+   "id": "43e12a5f",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
     "%%time\n",
-    "\n",
     "household = create_household()\n",
     "firm = create_firm()\n",
     "compute_equilibrium(firm, household)"
@@ -1084,7 +1109,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "899c5faa",
+   "id": "62576ccb",
    "metadata": {},
    "source": [
     "Notice how quickly we can compute the equilibrium capital stock using a simple\n",
@@ -1093,7 +1118,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba6f54d3",
+   "id": "be30498b",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -1101,10 +1126,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca166f58",
+   "id": "b6f68c08",
    "metadata": {},
    "source": [
-    "## Exercise 18.1\n",
+    "## Exercise 17.1\n",
     "\n",
     "Using the default household and firm model, produce a graph\n",
     "showing the behaviour of equilibrium capital stock with the increase in $ \\beta $."
@@ -1112,16 +1137,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31632eb6",
+   "id": "0bacd2eb",
    "metadata": {},
    "source": [
-    "## Solution to[ Exercise 18.1](https://jax.quantecon.org/#aygr_ex1)"
+    "## Solution to[ Exercise 17.1](https://jax.quantecon.org/#aygr_ex1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c2c2572",
+   "id": "7ddd5b36",
    "metadata": {
     "hide-output": false
    },
@@ -1139,7 +1164,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35c19b38",
+   "id": "120b6d1c",
    "metadata": {
     "hide-output": false
    },
@@ -1154,10 +1179,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bfa1d20e",
+   "id": "8b2bff76",
    "metadata": {},
    "source": [
-    "## Exercise 18.2\n",
+    "## Exercise 17.2\n",
     "\n",
     "Switch to the CRRA utility function\n",
     "\n",
@@ -1177,10 +1202,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "296870a5",
+   "id": "85bd00cb",
    "metadata": {},
    "source": [
-    "## Solution to[ Exercise 18.2](https://jax.quantecon.org/#aygr_ex2)\n",
+    "## Solution to[ Exercise 17.2](https://jax.quantecon.org/#aygr_ex2)\n",
     "\n",
     "Let’s define the utility function"
    ]
@@ -1188,7 +1213,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e6dbdbcd",
+   "id": "482ea17a",
    "metadata": {
     "hide-output": false
    },
@@ -1200,7 +1225,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3505d5ca",
+   "id": "2fdb1ba9",
    "metadata": {},
    "source": [
     "We need to re-compile all the jitted functions in order notice the change\n",
@@ -1210,7 +1235,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e06b47c8",
+   "id": "d33d05d2",
    "metadata": {
     "hide-output": false
    },
@@ -1227,7 +1252,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea3c6cc3",
+   "id": "0bd44f09",
    "metadata": {},
    "source": [
     "Now, let’s plot the the demand for capital by firms"
@@ -1236,7 +1261,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d26ecba3",
+   "id": "d8c76759",
    "metadata": {
     "hide-output": false
    },
@@ -1250,7 +1275,6 @@
     "num_points = 50\n",
     "r_vals = np.linspace(0.005, 0.04, num_points)\n",
     "\n",
-    "\n",
     "# Compute supply of capital\n",
     "k_vals = np.empty(num_points)\n",
     "for i, r in enumerate(r_vals):\n",
@@ -1261,7 +1285,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d66cc185",
+   "id": "e941ce05",
    "metadata": {
     "hide-output": false
    },
@@ -1281,7 +1305,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87879b2f",
+   "id": "9fa83913",
    "metadata": {},
    "source": [
     "Compute the equilibrium"
@@ -1290,14 +1314,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5990269f",
+   "id": "46bcb41b",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
     "%%time\n",
-    "\n",
     "household = create_household()\n",
     "firm = create_firm()\n",
     "compute_equilibrium(firm, household)"
@@ -1305,7 +1328,7 @@
   }
  ],
  "metadata": {
-  "date": 1715241420.050143,
+  "date": 1718254770.8250735,
   "filename": "aiyagari_jax.md",
   "kernelspec": {
    "display_name": "Python",
