--- a/arellano.ipynb
+++ b/arellano.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7f3a0085",
+   "id": "3e966d59",
    "metadata": {},
    "source": [
     "# Default Risk and Income Fluctuations"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11bf8f26",
+   "id": "5bd411fe",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d7afbe98",
+   "id": "54eb9c99",
    "metadata": {
     "hide-output": false
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "916e0f0e",
+   "id": "2b4b76a6",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0bc6b01",
+   "id": "91efd087",
    "metadata": {
     "hide-output": false
    },
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc0496c8",
+   "id": "3a379e81",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df1c2030",
+   "id": "2e3db669",
    "metadata": {
     "hide-output": false
    },
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46f66692",
+   "id": "db8bf17e",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -135,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14324ddf",
+   "id": "3ebc46a5",
    "metadata": {
     "hide-output": false
    },
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5d90b09",
+   "id": "73466e76",
    "metadata": {},
    "source": [
     "## Structure\n",
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3427913d",
+   "id": "7fde857c",
    "metadata": {},
    "source": [
     "### Output, Consumption and Debt\n",
@@ -176,7 +176,7 @@
     "\n",
     "<a id='equation-equation13-1'></a>\n",
     "$$\n",
-    "\\mathbb E \\sum_{t=0}^{\\infty} \\beta^t u(c_t) \\tag{17.1}\n",
+    "\\mathbb E \\sum_{t=0}^{\\infty} \\beta^t u(c_t) \\tag{16.1}\n",
     "$$\n",
     "\n",
     "Here\n",
@@ -188,7 +188,7 @@
     "Consumption sequences enjoyed by households are affected by the government’s\n",
     "decision to borrow or lend internationally.\n",
     "\n",
-    "The government is benevolent in the sense that its aim is to maximize [(17.1)](#equation-equation13-1).\n",
+    "The government is benevolent in the sense that its aim is to maximize [(16.1)](#equation-equation13-1).\n",
     "\n",
     "The government is the only domestic actor with access to foreign credit.\n",
     "\n",
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2525875",
+   "id": "e797fcf8",
    "metadata": {},
    "source": [
     "### Asset Markets\n",
@@ -229,7 +229,7 @@
     "\n",
     "<a id='equation-equation13-2'></a>\n",
     "$$\n",
-    "c = y + B - q(B', y) B' \\tag{17.2}\n",
+    "c = y + B - q(B', y) B' \\tag{16.2}\n",
     "$$\n",
     "\n",
     "Here and below, a prime denotes a next period value or a claim maturing next period.\n",
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "daddf5f8",
+   "id": "a9062e8f",
    "metadata": {},
    "source": [
     "### Financial Markets\n",
@@ -265,7 +265,7 @@
     "\n",
     "<a id='equation-equation13-3'></a>\n",
     "$$\n",
-    "q = \\frac{1 - \\delta}{1 + r} \\tag{17.3}\n",
+    "q = \\frac{1 - \\delta}{1 + r} \\tag{16.3}\n",
     "$$\n",
     "\n",
     "Next we turn to how the government in effect chooses the default probability $ \\delta $."
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2913b04a",
+   "id": "9ad7122e",
    "metadata": {},
    "source": [
     "### Government’s Decisions\n",
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "607b2374",
+   "id": "45addfcc",
    "metadata": {},
    "source": [
     "### Reentering International Credit Market\n",
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b183aa5f",
+   "id": "76da1a68",
    "metadata": {},
    "source": [
     "## Equilibrium\n",
@@ -395,22 +395,22 @@
     "\n",
     "<a id='equation-equation13-4'></a>\n",
     "$$\n",
-    "\\delta(B', y) := \\int \\mathbb 1\\{v_c(B', y') < v_d(y') \\} p(y, y') dy' \\tag{17.4}\n",
+    "\\delta(B', y) := \\int \\mathbb 1\\{v_c(B', y') < v_d(y') \\} p(y, y') dy' \\tag{16.4}\n",
     "$$\n",
     "\n",
     "Given zero profits for foreign creditors in equilibrium, we can combine\n",
-    "[(17.3)](#equation-equation13-3) and [(17.4)](#equation-equation13-4) to pin down the bond price function:\n",
+    "[(16.3)](#equation-equation13-3) and [(16.4)](#equation-equation13-4) to pin down the bond price function:\n",
     "\n",
     "\n",
     "<a id='equation-equation13-5'></a>\n",
     "$$\n",
-    "q(B', y) = \\frac{1 - \\delta(B', y)}{1 + r} \\tag{17.5}\n",
+    "q(B', y) = \\frac{1 - \\delta(B', y)}{1 + r} \\tag{16.5}\n",
     "$$"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d91f899c",
+   "id": "bb21c5f3",
    "metadata": {},
    "source": [
     "### Definition of Equilibrium\n",
@@ -430,12 +430,12 @@
     "- The three Bellman equations for $ (v_c(B, y), v_d(y), v(B,y)) $ are satisfied  \n",
     "- Given the price function $ q(B',y) $, the default decision rule and the asset\n",
     "  accumulation decision rule attain the optimal value function  $ v(B,y) $, and  \n",
-    "- The price function $ q(B',y) $ satisfies equation [(17.5)](#equation-equation13-5)  "
+    "- The price function $ q(B',y) $ satisfies equation [(16.5)](#equation-equation13-5)  "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "3077a107",
+   "id": "b30638b0",
    "metadata": {},
    "source": [
     "## Computation\n",
@@ -481,7 +481,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4fa4a94f",
+   "id": "894cec58",
    "metadata": {
     "hide-output": false
    },
@@ -505,7 +505,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9be4aa07",
+   "id": "a86ffa43",
    "metadata": {
     "hide-output": false
    },
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b040cc48",
+   "id": "e7334832",
    "metadata": {},
    "source": [
     "Here is the utility function."
@@ -551,7 +551,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3bba92f",
+   "id": "4d6229bc",
    "metadata": {
     "hide-output": false
    },
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0397a4e8",
+   "id": "7f927908",
    "metadata": {},
    "source": [
     "Here is a function to compute the bond price at each state, given $ v_c $ and\n",
@@ -574,7 +574,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3958cb90",
+   "id": "8db46a89",
    "metadata": {
     "hide-output": false
    },
@@ -609,7 +609,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0860c6d",
+   "id": "de3250cf",
    "metadata": {},
    "source": [
     "Next we introduce Bellman operators that updated $ v_d $ and $ v_c $."
@@ -618,7 +618,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac955763",
+   "id": "dc0a73af",
    "metadata": {
     "hide-output": false
    },
@@ -649,7 +649,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a3cde39",
+   "id": "f9231051",
    "metadata": {
     "hide-output": false
    },
@@ -692,7 +692,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6046a598",
+   "id": "6537fa26",
    "metadata": {
     "hide-output": false
    },
@@ -706,7 +706,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0630c92f",
+   "id": "2b582a05",
    "metadata": {
     "hide-output": false
    },
@@ -719,7 +719,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a963514b",
+   "id": "0ef68e48",
    "metadata": {},
    "source": [
     "Let’s make JIT-compiled versions of these functions, with the sizes of the\n",
@@ -729,7 +729,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7e32aa4",
+   "id": "f12aa4ec",
    "metadata": {
     "hide-output": false
    },
@@ -744,7 +744,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "718a11fc",
+   "id": "0bfba69f",
    "metadata": {},
    "source": [
     "Here is a function that calls these operators in the right sequence."
@@ -753,7 +753,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e7526b3",
+   "id": "4749c316",
    "metadata": {
     "hide-output": false
    },
@@ -770,7 +770,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be6c8e6f",
+   "id": "94a091f5",
    "metadata": {},
    "source": [
     "We can now write a function that will use an instance of `ArellanoEconomy` and\n",
@@ -784,7 +784,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f0dc6dd",
+   "id": "228b4910",
    "metadata": {
     "hide-output": false
    },
@@ -833,7 +833,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c2deb639",
+   "id": "ad48a54b",
    "metadata": {},
    "source": [
     "Let’s try solving the model."
@@ -842,7 +842,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5745bdfd",
+   "id": "c4c67b1d",
    "metadata": {
     "hide-output": false
    },
@@ -854,19 +854,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5d1e00a8",
-   "metadata": {
-    "hide-output": false
-   },
-   "outputs": [],
-   "source": [
-    "v_c, v_d, q, B_star = solve(ae)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "42110e7f",
+   "id": "0c05c7a0",
    "metadata": {
     "hide-output": false
    },
@@ -878,7 +866,28 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e12df12",
+   "id": "a8f05263",
+   "metadata": {},
+   "source": [
+    "We run it again to get rid of compile time."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "853459a0",
+   "metadata": {
+    "hide-output": false
+   },
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "v_c, v_d, q, B_star = solve(ae)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f7249ae3",
    "metadata": {},
    "source": [
     "Finally, we write a function that will allow us to simulate the economy once\n",
@@ -888,7 +897,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef0210c5",
+   "id": "5d3e0b3f",
    "metadata": {
     "hide-output": false
    },
@@ -961,7 +970,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66553c06",
+   "id": "67726548",
    "metadata": {},
    "source": [
     "## Results\n",
@@ -1003,7 +1012,7 @@
     "\n",
     "  \n",
     "We can use the results of the computation to study the default probability $ \\delta(B', y) $\n",
-    "defined in [(17.4)](#equation-equation13-4).\n",
+    "defined in [(16.4)](#equation-equation13-4).\n",
     "\n",
     "The next plot shows these default probabilities over $ (B', y) $ as a heat map.\n",
     "\n",
@@ -1027,7 +1036,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73a170b6",
+   "id": "d0313f76",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -1035,10 +1044,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7d8f716",
+   "id": "fc5bfe02",
    "metadata": {},
    "source": [
-    "## Exercise 17.1\n",
+    "## Exercise 16.1\n",
     "\n",
     "To the extent that you can, replicate the figures shown above\n",
     "\n",
@@ -1048,10 +1057,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c9b91cb",
+   "id": "d023a342",
    "metadata": {},
    "source": [
-    "## Solution to[ Exercise 17.1](https://jax.quantecon.org/#arellano_ex1)\n",
+    "## Solution to[ Exercise 16.1](https://jax.quantecon.org/#arellano_ex1)\n",
     "\n",
     "Compute the value function, policy and equilibrium prices"
    ]
@@ -1059,7 +1068,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16a606d5",
+   "id": "d578f6e5",
    "metadata": {
     "hide-output": false
    },
@@ -1071,7 +1080,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96ca918e",
+   "id": "761c7ca5",
    "metadata": {},
    "source": [
     "Compute the bond price schedule as seen in figure 3 of [[Arellano, 2008](https://jax.quantecon.org/zreferences.html#id255)]"
@@ -1080,7 +1089,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c1d50c3",
+   "id": "60ed09ae",
    "metadata": {
     "hide-output": false
    },
@@ -1116,7 +1125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f384b08",
+   "id": "c579eaa9",
    "metadata": {},
    "source": [
     "Draw a plot of the value functions"
@@ -1125,7 +1134,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "932bb885",
+   "id": "67daa4fa",
    "metadata": {
     "hide-output": false
    },
@@ -1145,7 +1154,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a12ef010",
+   "id": "47b180b1",
    "metadata": {},
    "source": [
     "Draw a heat map for default probability"
@@ -1154,7 +1163,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54baa3b3",
+   "id": "14eb55a0",
    "metadata": {
     "hide-output": false
    },
@@ -1181,7 +1190,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "448de873",
+   "id": "672129ce",
    "metadata": {},
    "source": [
     "Plot a time series of major variables simulated from the model"
@@ -1190,7 +1199,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c915d6d8",
+   "id": "dec88237",
    "metadata": {
     "hide-output": false
    },
@@ -1209,7 +1218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c7494805",
+   "id": "382a27ec",
    "metadata": {
     "hide-output": false
    },
@@ -1254,7 +1263,7 @@
   }
  ],
  "metadata": {
-  "date": 1715241420.1132867,
+  "date": 1718254770.8690393,
   "filename": "arellano.md",
   "kernelspec": {
    "display_name": "Python",
