--- a/intro.ipynb
+++ b/intro.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "abe8d03e",
+   "id": "44b28808",
    "metadata": {},
    "source": [
     "# Quantitative Economics with JAX\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1d9b080",
+   "id": "88edc9e3",
    "metadata": {},
    "source": [
     "# Introduction\n",
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "706a6477",
+   "id": "cb80309d",
    "metadata": {},
    "source": [
     "# Simulation\n",
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6404eee1",
+   "id": "977021a4",
    "metadata": {},
    "source": [
     "# Asset Pricing\n",
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1fac053d",
+   "id": "6b2da9b4",
    "metadata": {},
    "source": [
     "# Dynamic Programming\n",
@@ -59,13 +59,12 @@
     "- [Shortest Paths](https://jax.quantecon.org/short_path.html)\n",
     "- [Optimal Investment](https://jax.quantecon.org/opt_invest.html)\n",
     "- [Inventory Management Model](https://jax.quantecon.org/inventory_ssd.html)\n",
-    "- [Endogenous Grid Method](https://jax.quantecon.org/ifp_egm.html)\n",
-    "- [Cake Eating: Numerical Methods](https://jax.quantecon.org/cake_eating_numerical.html)"
+    "- [Endogenous Grid Method](https://jax.quantecon.org/ifp_egm.html)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "84cd3dd1",
+   "id": "6a51b452",
    "metadata": {},
    "source": [
     "# Macroeconomic Models\n",
@@ -78,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d1b34aa",
+   "id": "fb798e8d",
    "metadata": {},
    "source": [
     "# Data and Empirics\n",
@@ -88,7 +87,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cabf5c7b",
+   "id": "1213645c",
    "metadata": {},
    "source": [
     "# Other\n",
@@ -100,7 +99,7 @@
   }
  ],
  "metadata": {
-  "date": 1715241420.2635472,
+  "date": 1718254770.9524486,
   "filename": "intro.md",
   "kernelspec": {
    "display_name": "Python",
