--- a/inventory_dynamics.ipynb
+++ b/inventory_dynamics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "01a2aaa1",
+   "id": "999eee58",
    "metadata": {},
    "source": [
     "# Inventory Dynamics"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bfee38a1",
+   "id": "b2153bbc",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b667abb1",
+   "id": "a221614d",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4fb16775",
+   "id": "67165141",
    "metadata": {
     "hide-output": false
    },
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17affd2b",
+   "id": "44d93dba",
    "metadata": {},
    "source": [
     "Here’s a description of our GPU:"
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bdba9634",
+   "id": "0010ec50",
    "metadata": {
     "hide-output": false
    },
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b256f798",
+   "id": "abb222a0",
    "metadata": {},
    "source": [
     "## Sample paths\n",
@@ -133,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "363393d2",
+   "id": "a2e60829",
    "metadata": {
     "hide-output": false
    },
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2bc545b1",
+   "id": "fc1eecce",
    "metadata": {},
    "source": [
     "## Cross-sectional distributions\n",
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "267e3009",
+   "id": "21317186",
    "metadata": {
     "hide-output": false
    },
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b985dc80",
+   "id": "ac548f7e",
    "metadata": {},
    "source": [
     "### For loop version\n",
@@ -224,7 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89f5b2c6",
+   "id": "5bbba940",
    "metadata": {
     "hide-output": false
    },
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e271a57",
+   "id": "04a9136c",
    "metadata": {},
    "source": [
     "We’ll use the following specification"
@@ -255,7 +255,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8edfa20b",
+   "id": "a55b1cb1",
    "metadata": {
     "hide-output": false
    },
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2760801f",
+   "id": "d6b87e95",
    "metadata": {},
    "source": [
     "Let’s look at the timing."
@@ -278,20 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb6ee077",
-   "metadata": {
-    "hide-output": false
-   },
-   "outputs": [],
-   "source": [
-    "%time X_vec = compute_cross_section(params, \\\n",
-    "        x_init, T, key).block_until_ready()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5ab2cafd",
+   "id": "72782bf0",
    "metadata": {
     "hide-output": false
    },
@@ -303,7 +290,28 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ad4808b",
+   "id": "84b2027e",
+   "metadata": {},
+   "source": [
+    "Let’s run again to eliminate compile time."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "872423b0",
+   "metadata": {
+    "hide-output": false
+   },
+   "outputs": [],
+   "source": [
+    "%time X_vec = compute_cross_section(params, \\\n",
+    "        x_init, T, key).block_until_ready()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8d2b1c86",
    "metadata": {},
    "source": [
     "Here’s a histogram of inventory levels at time $ T $."
@@ -312,7 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96994e66",
+   "id": "c1c599b0",
    "metadata": {
     "hide-output": false
    },
@@ -331,7 +339,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ef9cc1a",
+   "id": "d81fd48f",
    "metadata": {},
    "source": [
     "### Compiling the outer loop\n",
@@ -345,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd121784",
+   "id": "b3d38af1",
    "metadata": {
     "hide-output": false
    },
@@ -384,7 +392,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c55f744",
+   "id": "d74b73d8",
    "metadata": {},
    "source": [
     "Let’s see how fast this runs with compile time."
@@ -393,19 +401,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7b1ec7f",
+   "id": "d3878f52",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
     "%time X_vec = compute_cross_section_fori(params, \\\n",
-    "    x_init, T, key).block_until_ready()"
+    "                x_init, T, key).block_until_ready()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "532e8fd2",
+   "id": "587f5ffe",
    "metadata": {},
    "source": [
     "And let’s see how fast it runs without compile time."
@@ -414,19 +422,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87df2505",
+   "id": "3492fec5",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
     "%time X_vec = compute_cross_section_fori(params, \\\n",
-    "    x_init, T, key).block_until_ready()"
+    "                x_init, T, key).block_until_ready()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d9b32aab",
+   "id": "61fb4cc3",
    "metadata": {},
    "source": [
     "Compared to the original version with a pure Python outer loop, we have\n",
@@ -437,7 +445,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f96cefa4",
+   "id": "e4c95f01",
    "metadata": {},
    "source": [
     "### Further vectorization\n",
@@ -451,7 +459,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26572139",
+   "id": "c780883d",
    "metadata": {
     "hide-output": false
    },
@@ -481,7 +489,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e291104d",
+   "id": "ef69cdb3",
    "metadata": {},
    "source": [
     "Let’s test it with compile time included."
@@ -490,19 +498,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43d564b6",
+   "id": "8225f98d",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
     "%time X_vec = compute_cross_section_fori(params, \\\n",
-    "    x_init, T, key).block_until_ready()"
+    "                x_init, T, key).block_until_ready()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "6d82e2b5",
+   "id": "a831195e",
    "metadata": {},
    "source": [
     "Let’s run again to eliminate compile time."
@@ -511,19 +519,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66bf560d",
+   "id": "f36e4d96",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
     "%time X_vec = compute_cross_section_fori(params, \\\n",
-    "    x_init, T, key).block_until_ready()"
+    "                x_init, T, key).block_until_ready()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "86b9c10f",
+   "id": "c3a510c6",
    "metadata": {},
    "source": [
     "On one hand, this version is faster than the previous one, where random variables were\n",
@@ -537,7 +545,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14bae68e",
+   "id": "c730addd",
    "metadata": {},
    "source": [
     "## Distribution dynamics\n",
@@ -553,7 +561,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16a0b0b7",
+   "id": "5308b1d0",
    "metadata": {
     "hide-output": false
    },
@@ -581,7 +589,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f68ac28",
+   "id": "c78f5467",
    "metadata": {},
    "source": [
     "Let’s test it"
@@ -590,7 +598,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87b7cd7e",
+   "id": "b86abfe5",
    "metadata": {
     "hide-output": false
    },
@@ -603,12 +611,33 @@
     "\n",
     "\n",
     "%time X = shift_forward_and_sample(x_init, params, \\\n",
-    "                              sample_dates, key).block_until_ready()"
+    "                    sample_dates, key).block_until_ready()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "6a443f16",
+   "id": "77babef1",
+   "metadata": {},
+   "source": [
+    "We run the code again to eliminate compile time."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bec0e7bd",
+   "metadata": {
+    "hide-output": false
+   },
+   "outputs": [],
+   "source": [
+    "%time X = shift_forward_and_sample(x_init, params, \\\n",
+    "                    sample_dates, key).block_until_ready()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8de59b8a",
    "metadata": {},
    "source": [
     "Let’s plot the output."
@@ -617,7 +646,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b18b774e",
+   "id": "61d4adab",
    "metadata": {
     "hide-output": false
    },
@@ -639,7 +668,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34f61b37",
+   "id": "a8b2ad4b",
    "metadata": {},
    "source": [
     "This model for inventory dynamics is asymptotically stationary, with a unique\n",
@@ -658,7 +687,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c49d1a7",
+   "id": "8c778cda",
    "metadata": {},
    "source": [
     "## Restock frequency\n",
@@ -677,7 +706,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c36a8f0f",
+   "id": "23509812",
    "metadata": {},
    "source": [
     "### For loop version\n",
@@ -688,7 +717,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8f968be",
+   "id": "fe84e885",
    "metadata": {
     "hide-output": false
    },
@@ -730,20 +759,52 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e64392f9",
+   "id": "c4f82342",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
     "key = random.PRNGKey(27)\n",
-    "%time freq = compute_freq(params, key).block_until_ready()\n",
+    "\n",
+    "%time freq = compute_freq(params, key).block_until_ready()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "580ae0a2",
+   "metadata": {},
+   "source": [
+    "We run the code again to get rid of compile time."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dd571307",
+   "metadata": {
+    "hide-output": false
+   },
+   "outputs": [],
+   "source": [
+    "%time freq = compute_freq(params, key).block_until_ready()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8a1cb693",
+   "metadata": {
+    "hide-output": false
+   },
+   "outputs": [],
+   "source": [
     "print(f\"Frequency of at least two stock outs = {freq}\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d090b627",
+   "id": "765dc648",
    "metadata": {},
    "source": [
     "### Exercise 4.1\n",
@@ -754,7 +815,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "353231aa",
+   "id": "569250c6",
    "metadata": {},
    "source": [
     "### Solution to[ Exercise 4.1](https://jax.quantecon.org/#inventory_dynamics_ex1)\n",
@@ -765,7 +826,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dff78dbf",
+   "id": "caa5fe38",
    "metadata": {
     "hide-output": false
    },
@@ -809,7 +870,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a725ae9c",
+   "id": "fa1f56e4",
    "metadata": {},
    "source": [
     "Note the time the routine takes to run, as well as the output"
@@ -818,21 +879,50 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab4f27bb",
+   "id": "9754e3ea",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
-    "%time freq = compute_freq(params, key).block_until_ready()\n",
-    "%time freq = compute_freq(params, key).block_until_ready()\n",
-    "\n",
+    "%time freq = compute_freq(params, key).block_until_ready()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "81a930fc",
+   "metadata": {},
+   "source": [
+    "We run the code again to eliminate the compile time."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5c11d453",
+   "metadata": {
+    "hide-output": false
+   },
+   "outputs": [],
+   "source": [
+    "%time freq = compute_freq(params, key).block_until_ready()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e4dad770",
+   "metadata": {
+    "hide-output": false
+   },
+   "outputs": [],
+   "source": [
     "print(f\"Frequency of at least two stock outs = {freq}\")"
    ]
   }
  ],
  "metadata": {
-  "date": 1715241420.296134,
+  "date": 1718254770.9787242,
   "filename": "inventory_dynamics.md",
   "kernelspec": {
    "display_name": "Python",
