--- a/job_search.ipynb
+++ b/job_search.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5ff3dd97",
+   "id": "a745c261",
    "metadata": {},
    "source": [
     "# Job Search"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0962558c",
+   "id": "0dad119b",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3e6e032",
+   "id": "56a17665",
    "metadata": {
     "hide-output": false
    },
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69075363",
+   "id": "71aaf7ba",
    "metadata": {},
    "source": [
     "We use the following imports."
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c43fc8a",
+   "id": "025f4f14",
    "metadata": {
     "hide-output": false
    },
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "048df32a",
+   "id": "d2e3c2c3",
    "metadata": {},
    "source": [
     "## Model\n",
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86260c28",
+   "id": "eb7b75f4",
    "metadata": {
     "hide-output": false
    },
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "126dd9e6",
+   "id": "c95b75b0",
    "metadata": {},
    "source": [
     "The function below holds default values and populates the namedtuple."
@@ -136,7 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "970a9952",
+   "id": "90939acf",
    "metadata": {
     "hide-output": false
    },
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77442c84",
+   "id": "1b5f34ff",
    "metadata": {},
    "source": [
     "Here’s the Bellman operator."
@@ -167,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af448f42",
+   "id": "436cc53f",
    "metadata": {
     "hide-output": false
    },
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ccd6ffc8",
+   "id": "9a5197f9",
    "metadata": {},
    "source": [
     "The next function computes the optimal policy under the assumption that $ v $ is\n",
@@ -214,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1419d2cf",
+   "id": "06f89102",
    "metadata": {
     "hide-output": false
    },
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8419bb0a",
+   "id": "f843939d",
    "metadata": {},
    "source": [
     "Here’s a routine for value function iteration."
@@ -241,7 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b7de51d",
+   "id": "3c4f8c83",
    "metadata": {
     "hide-output": false
    },
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7981d31",
+   "id": "2e2c01a8",
    "metadata": {},
    "source": [
     "### Computing the solution\n",
@@ -279,7 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "745ebdd6",
+   "id": "34e232d8",
    "metadata": {
     "hide-output": false
    },
@@ -288,14 +288,32 @@
     "model = create_js_model()\n",
     "n, w_vals, P, β, c = model\n",
     "\n",
-    "qe.tic()\n",
-    "v_star, σ_star = vfi(model)\n",
-    "vfi_time = qe.toc()"
+    "%time v_star, σ_star = vfi(model)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d09b16a1",
+   "id": "457d5a59",
+   "metadata": {},
+   "source": [
+    "We run it again to eliminate compile time."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "079eb9fc",
+   "metadata": {
+    "hide-output": false
+   },
+   "outputs": [],
+   "source": [
+    "%time v_star, σ_star = vfi(model)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a08ff87a",
    "metadata": {},
    "source": [
     "We compute the reservation wage as the first $ w $ such that $ \\sigma(w)=1 $."
@@ -304,7 +322,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ef90d64",
+   "id": "ae619900",
    "metadata": {
     "hide-output": false
    },
@@ -316,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f6e3afd",
+   "id": "6901fd14",
    "metadata": {
     "hide-output": false
    },
@@ -332,7 +350,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "296f8b84",
+   "id": "a86fc0be",
    "metadata": {},
    "source": [
     "## Exercise"
@@ -340,7 +358,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f795243",
+   "id": "9734d598",
    "metadata": {},
    "source": [
     "## Exercise 9.1\n",
@@ -373,7 +391,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "00202381",
+   "id": "eddd7248",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 9.1](https://jax.quantecon.org/#job_search_1)"
@@ -382,7 +400,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80afea9d",
+   "id": "f179ebe9",
    "metadata": {
     "hide-output": false
    },
@@ -456,15 +474,33 @@
     "\n",
     "n, w_vals, P, β, c, θ = model_rs\n",
     "\n",
-    "qe.tic()\n",
-    "v_star_rs, σ_star_rs = vfi(model_rs)\n",
-    "vfi_time = qe.toc()"
+    "%time v_star_rs, σ_star_rs = vfi(model_rs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d254809c",
+   "metadata": {},
+   "source": [
+    "We run it again to eliminate the compilation time."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dcb2bc55",
+   "id": "4eb6230a",
+   "metadata": {
+    "hide-output": false
+   },
+   "outputs": [],
+   "source": [
+    "%time v_star_rs, σ_star_rs = vfi(model_rs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1e913b9f",
    "metadata": {
     "hide-output": false
    },
@@ -476,7 +512,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "264b9ed0",
+   "id": "04e1419c",
    "metadata": {
     "hide-output": false
    },
@@ -494,7 +530,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07eed34e",
+   "id": "95cfb600",
    "metadata": {},
    "source": [
     "The figure shows that the reservation wage under risk sensitive preferences (RS $ \\bar w $) shifts down.\n",
@@ -505,7 +541,7 @@
   }
  ],
  "metadata": {
-  "date": 1715241420.5653946,
+  "date": 1718254771.195203,
   "filename": "job_search.md",
   "kernelspec": {
    "display_name": "Python",
