--- a/kesten_processes.ipynb
+++ b/kesten_processes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d8cd0fa1",
+   "id": "a6daade7",
    "metadata": {},
    "source": [
     "# Kesten Processes and Firm Dynamics\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ec4b204",
+   "id": "f4480325",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "580b02ef",
+   "id": "68ce3b3d",
    "metadata": {
     "hide-output": false
    },
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b7c33f9",
+   "id": "2f5d4d3e",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f908b87",
+   "id": "3b9079d9",
    "metadata": {
     "hide-output": false
    },
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6529a479",
+   "id": "3d23e918",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f33490ce",
+   "id": "13b557b4",
    "metadata": {
     "hide-output": false
    },
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8636f960",
+   "id": "2bb3b71b",
    "metadata": {},
    "source": [
     "## Kesten processes\n",
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ea2dad7",
+   "id": "f58d12db",
    "metadata": {},
    "source": [
     "### Application: firm dynamics\n",
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "993234a5",
+   "id": "0db96c96",
    "metadata": {},
    "source": [
     "#### Gibrat’s law\n",
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d4612ce",
+   "id": "ef11a222",
    "metadata": {},
    "source": [
     "#### Heavy tails\n",
@@ -238,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d532a333",
+   "id": "c0dcf961",
    "metadata": {
     "hide-output": false
    },
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94e7bff0",
+   "id": "771ea653",
    "metadata": {},
    "source": [
     "Now we write a for loop that repeatedly calls this function, to push a\n",
@@ -272,7 +272,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8927a2a2",
+   "id": "2f450b99",
    "metadata": {
     "hide-output": false
    },
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51d7ced5",
+   "id": "e77ca1c7",
    "metadata": {},
    "source": [
     "Running the above function again so we can see the speed with and without compile time."
@@ -323,7 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34065cea",
+   "id": "29a23c71",
    "metadata": {
     "hide-output": false
    },
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d5e0d9e",
+   "id": "818fd5b1",
    "metadata": {},
    "source": [
     "Notice that we do not JIT-compile the `for` loops, since\n",
@@ -350,7 +350,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0cf61d2",
+   "id": "1d7d687e",
    "metadata": {
     "hide-output": false
    },
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a47eb499",
+   "id": "7f68dc64",
    "metadata": {},
    "source": [
     "The plot produces a straight line, consistent with a Pareto tail."
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a83fcdb",
+   "id": "d511c0b9",
    "metadata": {},
    "source": [
     "#### Alternative implementation with `lax.fori_loop`\n",
@@ -401,7 +401,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a926ee8",
+   "id": "4727e8d8",
    "metadata": {
     "hide-output": false
    },
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f10a713",
+   "id": "d20bab01",
    "metadata": {},
    "source": [
     "In this case, `M` is small enough for the code to run and\n",
@@ -456,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d807a842",
+   "id": "7b4bc59a",
    "metadata": {
     "hide-output": false
    },
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d07f0f47",
+   "id": "27a3a2f6",
    "metadata": {},
    "source": [
     "Here we produce the same rank-size plot:"
@@ -476,7 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ca880dc",
+   "id": "9e333e16",
    "metadata": {
     "hide-output": false
    },
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd690822",
+   "id": "cc0de00e",
    "metadata": {},
    "source": [
     "Let’s rerun the `for` loop version on smaller `M` to compare the speed"
@@ -503,7 +503,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "832184f2",
+   "id": "8bc9d617",
    "metadata": {
     "hide-output": false
    },
@@ -514,7 +514,27 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91e7f9fa",
+   "id": "4a56155a",
+   "metadata": {},
+   "source": [
+    "Let’s run it again to get rid of the compile time."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d521ce00",
+   "metadata": {
+    "hide-output": false
+   },
+   "outputs": [],
+   "source": [
+    "%time generate_draws(M=500_000).block_until_ready()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "31be432c",
    "metadata": {},
    "source": [
     "We see that the `lax.fori_loop` version is faster than the `for` loop version\n",
@@ -523,7 +543,7 @@
   }
  ],
  "metadata": {
-  "date": 1715241420.5921066,
+  "date": 1718254771.2152934,
   "filename": "kesten_processes.md",
   "kernelspec": {
    "display_name": "Python",
