--- a/lucas_model.ipynb
+++ b/lucas_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7f510872",
+   "id": "d41c7c5f",
    "metadata": {},
    "source": [
     "\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af5fea57",
+   "id": "1a93c932",
    "metadata": {},
    "source": [
     "# Asset Pricing: The Lucas Asset Pricing Model"
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d04b4ac",
+   "id": "ce7263dd",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -36,21 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb4b9bbe",
-   "metadata": {},
-   "source": [
-    "## Contents\n",
-    "\n",
-    "- [Asset Pricing: The Lucas Asset Pricing Model](#Asset-Pricing:-The-Lucas-Asset-Pricing-Model)  \n",
-    "  - [Overview](#Overview)  \n",
-    "  - [The Lucas Model](#The-Lucas-Model)  \n",
-    "  - [Computation](#Computation)  \n",
-    "  - [Exercises](#Exercises)  "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a68b0499",
+   "id": "a16b4f07",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -81,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe0b569e",
+   "id": "9a5aa9ac",
    "metadata": {
     "hide-output": false
    },
@@ -89,16 +75,16 @@
    "source": [
     "import jax.numpy as jnp\n",
     "import jax\n",
-    "import time\n",
     "import numpy as np\n",
     "import numba\n",
     "from scipy.stats import lognorm\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "from time import time"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "5ab1c313",
+   "id": "e14e5b51",
    "metadata": {},
    "source": [
     "## The Lucas Model\n",
@@ -121,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4aa56780",
+   "id": "92bf6d11",
    "metadata": {},
    "source": [
     "### Basic Setup\n",
@@ -131,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5ea1aaa",
+   "id": "20e67174",
    "metadata": {},
    "source": [
     "#### Assets\n",
@@ -161,7 +147,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "533e52c1",
+   "id": "5524255f",
    "metadata": {},
    "source": [
     "#### Consumers\n",
@@ -185,7 +171,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5bfc6c6a",
+   "id": "f0b4bff5",
    "metadata": {},
    "source": [
     "### Pricing a Lucas Tree\n",
@@ -224,7 +210,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4149685c",
+   "id": "c4f3b68c",
    "metadata": {},
    "source": [
     "#### The Dynamic Program\n",
@@ -282,7 +268,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2143094d",
+   "id": "f34fe7c8",
    "metadata": {},
    "source": [
     "#### Next Steps\n",
@@ -301,7 +287,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7bb7f72",
+   "id": "7b2330bc",
    "metadata": {},
    "source": [
     "#### Equilibrium Constraints\n",
@@ -320,7 +306,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9d6b030",
+   "id": "ad6e06ea",
    "metadata": {},
    "source": [
     "#### The Equilibrium Price Function\n",
@@ -366,7 +352,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "80af6dee",
+   "id": "07602b66",
    "metadata": {},
    "source": [
     "### Solving the Model\n",
@@ -382,7 +368,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f8a32e6",
+   "id": "31f7f03b",
    "metadata": {},
    "source": [
     "#### Setting up the Problem\n",
@@ -432,7 +418,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2351af7a",
+   "id": "065c2435",
    "metadata": {},
    "source": [
     "#### A Little Fixed Point Theory\n",
@@ -494,7 +480,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1574537",
+   "id": "0a0030d2",
    "metadata": {},
    "source": [
     "## Computation\n",
@@ -522,7 +508,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba193567",
+   "id": "8f3c97b7",
    "metadata": {},
    "source": [
     "### Numba Code\n",
@@ -537,7 +523,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f2fa1b1d",
+   "id": "e91e0ade",
    "metadata": {
     "hide-output": false
    },
@@ -571,7 +557,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "440cdea7",
+   "id": "a33b9a1a",
    "metadata": {},
    "source": [
     "Here’s a Numba-jitted version of the Lucas operator"
@@ -580,7 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39226262",
+   "id": "41c5a831",
    "metadata": {
     "hide-output": false
    },
@@ -607,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53596ee7",
+   "id": "a6f279d2",
    "metadata": {},
    "source": [
     "To solve the model, we write a function that iterates using the Lucas operator\n",
@@ -617,7 +603,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "edd3967d",
+   "id": "b8804f8d",
    "metadata": {
     "hide-output": false
    },
@@ -646,7 +632,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce6a26ad",
+   "id": "c8babaab",
    "metadata": {},
    "source": [
     "Let’s solve the model and plot the resulting price function"
@@ -655,7 +641,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c0d4077",
+   "id": "bafdffd5",
    "metadata": {
     "hide-output": false
    },
@@ -666,20 +652,32 @@
     "grid, draws, h = arrays\n",
     "\n",
     "# Solve once to compile\n",
+    "start = time()\n",
     "price_vals = solve_model(params, arrays)\n",
-    "\n",
-    "# Now time execution without compile time\n",
-    "in_time = time.time()\n",
-    "price_vals = solve_model(params, arrays)\n",
-    "out_time = time.time()\n",
-    "numba_elapsed = out_time - in_time\n",
-    "print(\"Numba execution time = \", numba_elapsed)"
+    "numba_with_compile_time = time() - start\n",
+    "print(\"Numba compile plus execution time = \", numba_with_compile_time)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a00d270",
+   "id": "1a73be6f",
+   "metadata": {
+    "hide-output": false
+   },
+   "outputs": [],
+   "source": [
+    "# Now time execution without compile time\n",
+    "start = time()\n",
+    "price_vals = solve_model(params, arrays)\n",
+    "numba_without_compile_time = time() - start\n",
+    "print(\"Numba execution time = \", numba_without_compile_time)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "01c1757e",
    "metadata": {
     "hide-output": false
    },
@@ -695,7 +693,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a4a971ce",
+   "id": "8a222705",
    "metadata": {},
    "source": [
     "We see that the price is increasing, even if we remove all serial correlation\n",
@@ -708,7 +706,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6b1b44e",
+   "id": "db0b9f17",
    "metadata": {},
    "source": [
     "### JAX Code\n",
@@ -719,7 +717,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ddae912c",
+   "id": "af00022f",
    "metadata": {
     "hide-output": false
    },
@@ -751,7 +749,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88ee9b15",
+   "id": "c58128fa",
    "metadata": {},
    "source": [
     "We’ll use the following function to simultaneously compute the expectation\n",
@@ -766,7 +764,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0571c5b2",
+   "id": "fc8b51b6",
    "metadata": {
     "hide-output": false
    },
@@ -783,7 +781,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f67b9329",
+   "id": "a0403184",
    "metadata": {},
    "source": [
     "Here’s the Lucas operator"
@@ -792,7 +790,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "122c5646",
+   "id": "c99ea152",
    "metadata": {
     "hide-output": false
    },
@@ -812,7 +810,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f809de07",
+   "id": "d2b17974",
    "metadata": {},
    "source": [
     "We’ll use successive approximation to compute the fixed point."
@@ -821,7 +819,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "01515b39",
+   "id": "69baad19",
    "metadata": {
     "hide-output": false
    },
@@ -851,7 +849,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69b130ed",
+   "id": "59dca60a",
    "metadata": {},
    "source": [
     "Here’s a function that solves the model"
@@ -860,7 +858,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47698955",
+   "id": "db3a3795",
    "metadata": {
     "hide-output": false
    },
@@ -886,7 +884,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "02d9436d",
+   "id": "499228e4",
    "metadata": {},
    "source": [
     "Now let’s solve the model again and compare timing"
@@ -895,7 +893,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d412e71",
+   "id": "424d0dc4",
    "metadata": {
     "hide-output": false
    },
@@ -906,20 +904,32 @@
     "γ, β, α, σ = params\n",
     "\n",
     "# Solve once to compile\n",
-    "price_vals = solve_model(params, arrays)\n",
-    "\n",
+    "start = time()\n",
+    "price_vals = solve_model(params, arrays).block_until_ready()\n",
+    "jax_with_compile_time = time() - start\n",
+    "print(\"JAX compile plus execution time = \", jax_with_compile_time)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c3383d29",
+   "metadata": {
+    "hide-output": false
+   },
+   "outputs": [],
+   "source": [
     "# Now time execution without compile time\n",
-    "in_time = time.time()\n",
-    "price_vals = solve_model(params, arrays)\n",
-    "out_time = time.time()\n",
-    "jax_elapsed = out_time - in_time\n",
-    "print(\"JAX execution time = \", jax_elapsed)\n",
-    "print(\"Speedup factor = \", numba_elapsed / jax_elapsed)"
+    "start = time()\n",
+    "price_vals = solve_model(params, arrays).block_until_ready()\n",
+    "jax_without_compile_time = time() - start\n",
+    "print(\"JAX execution time = \", jax_without_compile_time)\n",
+    "print(\"Speedup factor = \", numba_without_compile_time/jax_without_compile_time)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "76dbec4e",
+   "id": "b20d8de2",
    "metadata": {},
    "source": [
     "Let’s check the solutions are similar"
@@ -928,7 +938,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "715aa666",
+   "id": "1ec84793",
    "metadata": {
     "hide-output": false
    },
@@ -944,7 +954,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "826ea53e",
+   "id": "9189736d",
    "metadata": {},
    "source": [
     "## Exercises\n",
@@ -955,7 +965,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ff421b3",
+   "id": "55b87a6b",
    "metadata": {},
    "source": [
     "## Exercise 7.1\n",
@@ -967,7 +977,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a4f5ee8e",
+   "id": "2162d8ee",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 7.1](https://jax.quantecon.org/#lucas_ex1)"
@@ -976,7 +986,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91c1074c",
+   "id": "a667cb3e",
    "metadata": {
     "hide-output": false
    },
@@ -999,7 +1009,7 @@
   }
  ],
  "metadata": {
-  "date": 1715241420.6411712,
+  "date": 1718254771.2477605,
   "filename": "lucas_model.md",
   "kernelspec": {
    "display_name": "Python",
