--- a/newtons_method.ipynb
+++ b/newtons_method.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "22192357",
+   "id": "da723856",
    "metadata": {},
    "source": [
     "# Newton’s Method via JAX"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76e089e4",
+   "id": "74578add",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6544427e",
+   "id": "d832aad3",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e152cf3",
+   "id": "b61d54d8",
    "metadata": {
     "hide-output": false
    },
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "261ac26e",
+   "id": "2ad08c18",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6eb231e5",
+   "id": "e435d48c",
    "metadata": {
     "hide-output": false
    },
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f374f994",
+   "id": "15951d65",
    "metadata": {},
    "source": [
     "## Newton in one dimension\n",
@@ -109,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83ab8206",
+   "id": "8d9f1650",
    "metadata": {
     "hide-output": false
    },
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72031486",
+   "id": "077472fb",
    "metadata": {},
    "source": [
     "The code above uses automatic differentiation to calculate $ f' $ via the call to `jax.grad`.\n",
@@ -143,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b5c51656",
+   "id": "cc9cec33",
    "metadata": {
     "hide-output": false
    },
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "023a6718",
+   "id": "679faca2",
    "metadata": {},
    "source": [
     "Here we go"
@@ -172,7 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21ac0875",
+   "id": "0a57d2fa",
    "metadata": {
     "hide-output": false
    },
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cda6bbdc",
+   "id": "1e0f3f74",
    "metadata": {},
    "source": [
     "This number looks to be close to the root, given the figure."
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "228f9ed8",
+   "id": "addfb6db",
    "metadata": {},
    "source": [
     "## An Equilibrium Problem\n",
@@ -243,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "994cae01",
+   "id": "a7eb05ba",
    "metadata": {
     "hide-output": false
    },
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40a8daf4",
+   "id": "f7cc2878",
    "metadata": {},
    "source": [
     "## Computation\n",
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a713548a",
+   "id": "6a9c6497",
    "metadata": {},
    "source": [
     "### Newton’s Method\n",
@@ -290,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "904404e7",
+   "id": "f5ab9aa6",
    "metadata": {
     "hide-output": false
    },
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1a871af",
+   "id": "cd5cefd9",
    "metadata": {},
    "source": [
     "### Application\n",
@@ -335,7 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7596089a",
+   "id": "efb7cf2d",
    "metadata": {
     "hide-output": false
    },
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc95ad06",
+   "id": "6b4aeb27",
    "metadata": {},
    "source": [
     "Here’s our initial condition $ p_0 $"
@@ -366,7 +366,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a85c3830",
+   "id": "4f05f300",
    "metadata": {
     "hide-output": false
    },
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e728ccf",
+   "id": "d83a05d9",
    "metadata": {},
    "source": [
     "By combining the power of Newton’s method, JAX accelerated linear algebra,\n",
@@ -388,20 +388,40 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f1661851",
+   "id": "f6e20e87",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
     "%%time\n",
-    "\n",
     "p = newton(lambda p: e(p, A, b, c), init_p).block_until_ready()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "332980c8",
+   "id": "d0838f3e",
+   "metadata": {},
+   "source": [
+    "We run it again to eliminate compile time."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a1a4a72d",
+   "metadata": {
+    "hide-output": false
+   },
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "p = newton(lambda p: e(p, A, b, c), init_p).block_until_ready()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1b50b0e9",
    "metadata": {},
    "source": [
     "Here’s the size of the error:"
@@ -410,7 +430,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "02880346",
+   "id": "5701e438",
    "metadata": {
     "hide-output": false
    },
@@ -421,7 +441,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8cfae2b",
+   "id": "ae7b8bfc",
    "metadata": {},
    "source": [
     "With the same tolerance, SciPy’s `root` function takes much longer to run,\n",
@@ -431,14 +451,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "135a8779",
+   "id": "e959fada",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
     "%%time\n",
-    "\n",
     "solution = root(lambda p: e(p, A, b, c),\n",
     "                init_p,\n",
     "                jac=lambda p: jax.jacobian(e)(p, A, b, c),\n",
@@ -448,7 +467,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30ca2869",
+   "id": "f641ed2b",
    "metadata": {},
    "source": [
     "The result is also slightly less accurate:"
@@ -457,7 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ca1b9eff",
+   "id": "5eb24e02",
    "metadata": {
     "hide-output": false
    },
@@ -469,7 +488,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44bcb0cf",
+   "id": "e2cefd87",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -477,7 +496,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d207c947",
+   "id": "91ab8995",
    "metadata": {},
    "source": [
     "## Exercise 3.1\n",
@@ -537,7 +556,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c27287c",
+   "id": "f3ada002",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 3.1](https://jax.quantecon.org/#newton_ex1)\n",
@@ -548,7 +567,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79a8fab5",
+   "id": "b1b3ad5a",
    "metadata": {
     "hide-output": false
    },
@@ -567,7 +586,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3d30549",
+   "id": "b33ce1ce",
    "metadata": {},
    "source": [
     "Then we define the multivariate version of the formula for the [law of motion of capital](https://python.quantecon.org/newton_method.html#solow)"
@@ -576,7 +595,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea023868",
+   "id": "dd335d38",
    "metadata": {
     "hide-output": false
    },
@@ -588,7 +607,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e57938b",
+   "id": "fb74bcef",
    "metadata": {},
    "source": [
     "Let’s run through each starting value and see the output"
@@ -597,7 +616,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "199e3144",
+   "id": "d9a030e8",
    "metadata": {
     "hide-output": false
    },
@@ -614,7 +633,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e797b1f",
+   "id": "856c5c3e",
    "metadata": {},
    "source": [
     "We find that the results are invariant to the starting values.\n",
@@ -627,7 +646,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "475e39c1",
+   "id": "315b0cb9",
    "metadata": {
     "hide-output": false
    },
@@ -638,7 +657,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f48ad438",
+   "id": "f7e1da3d",
    "metadata": {},
    "source": [
     "Note the error is very small.\n",
@@ -649,7 +668,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8649606d",
+   "id": "9a17ed35",
    "metadata": {
     "hide-output": false
    },
@@ -667,8 +686,22 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7260239c",
+   "metadata": {
+    "hide-output": false
+   },
+   "outputs": [],
+   "source": [
+    "# Now we time it without compile\n",
+    "%time k = newton(lambda k: multivariate_solow(k, A=A, s=s, α=α, δ=δ) - k, \\\n",
+    "                 init).block_until_ready()"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "a08d324d",
+   "id": "ac41fe16",
    "metadata": {},
    "source": [
     "The result is very close to the true solution but still slightly different.\n",
@@ -679,7 +712,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4aac37c",
+   "id": "d08c9877",
    "metadata": {
     "hide-output": false
    },
@@ -690,13 +723,26 @@
     "init = init.astype('float64')\n",
     "\n",
     "%time k = newton(lambda k: multivariate_solow(k, A=A, s=s, α=α, δ=δ) - k,\\\n",
-    "                 init,\\\n",
-    "                 tol=1e-7).block_until_ready()"
+    "                 init, tol=1e-7).block_until_ready()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "67cff30e",
+   "metadata": {
+    "hide-output": false
+   },
+   "outputs": [],
+   "source": [
+    "# Now we time it without compile\n",
+    "%time k = newton(lambda k: multivariate_solow(k, A=A, s=s, α=α, δ=δ) - k,\\\n",
+    "                 init, tol=1e-7).block_until_ready()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "3fd33ae7",
+   "id": "e3ee333b",
    "metadata": {},
    "source": [
     "We can see it steps towards a more accurate solution."
@@ -704,7 +750,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54954c60",
+   "id": "bffec629",
    "metadata": {},
    "source": [
     "## Exercise 3.2\n",
@@ -750,7 +796,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa8c6d2e",
+   "id": "17b2e739",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 3.2](https://jax.quantecon.org/#newton_ex2)\n",
@@ -761,7 +807,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97436454",
+   "id": "355738a2",
    "metadata": {
     "hide-output": false
    },
@@ -780,7 +826,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67b51e5c",
+   "id": "f144f7ef",
    "metadata": {},
    "source": [
     "Let’s run through each initial guess and check the output"
@@ -789,7 +835,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "02ae313f",
+   "id": "51db4270",
    "metadata": {
     "hide-output": false
    },
@@ -808,7 +854,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2e11fed",
+   "id": "95a85605",
    "metadata": {},
    "source": [
     "We can find that Newton’s method may fail for some starting values.\n",
@@ -821,7 +867,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eeac983f",
+   "id": "eeda134b",
    "metadata": {
     "hide-output": false
    },
@@ -832,7 +878,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb2efeb8",
+   "id": "91195634",
    "metadata": {},
    "source": [
     "We can see the result is very accurate."
@@ -840,7 +886,7 @@
   }
  ],
  "metadata": {
-  "date": 1715241420.7885268,
+  "date": 1718254771.3540921,
   "filename": "newtons_method.md",
   "kernelspec": {
    "display_name": "Python",
