--- a/opt_invest.ipynb
+++ b/opt_invest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "907539a1",
+   "id": "6cf3ad1c",
    "metadata": {},
    "source": [
     "# Optimal Investment"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f267ceb",
+   "id": "9b36135e",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b7fc801b",
+   "id": "dd8e2ddc",
    "metadata": {
     "hide-output": false
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7beead3c",
+   "id": "2876d382",
    "metadata": {},
    "source": [
     "We study a monopolist who faces inverse demand curve\n",
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ccd9d5b9",
+   "id": "be165805",
    "metadata": {
     "hide-output": false
    },
@@ -93,12 +93,13 @@
     "import quantecon as qe\n",
     "import jax\n",
     "import jax.numpy as jnp\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "from time import time"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b9cf0047",
+   "id": "6af293f8",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -107,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b502e0c4",
+   "id": "b59414c2",
    "metadata": {
     "hide-output": false
    },
@@ -118,7 +119,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d514f4a",
+   "id": "6d72e015",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -127,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da6428f2",
+   "id": "3f4b2364",
    "metadata": {
     "hide-output": false
    },
@@ -138,7 +139,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dca62ff2",
+   "id": "dd06474f",
    "metadata": {},
    "source": [
     "Let’s define a function to create an investment model using the given parameters."
@@ -147,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1c7bb4d0",
+   "id": "e0677c59",
    "metadata": {
     "hide-output": false
    },
@@ -181,7 +182,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54c8e9e5",
+   "id": "909c7959",
    "metadata": {},
    "source": [
     "Let’s re-write the vectorized version of the right-hand side of the\n",
@@ -197,7 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c908a85a",
+   "id": "9550aaf9",
    "metadata": {
     "hide-output": false
    },
@@ -234,7 +235,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b11deae",
+   "id": "0fe408e3",
    "metadata": {},
    "source": [
     "We define a function to compute the current rewards $ r_\\sigma $ given policy $ \\sigma $,\n",
@@ -248,7 +249,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0686dca2",
+   "id": "9d7aeafe",
    "metadata": {
     "hide-output": false
    },
@@ -280,7 +281,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ce52307",
+   "id": "5785a8da",
    "metadata": {},
    "source": [
     "Define the Bellman operator."
@@ -289,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bf3b96bf",
+   "id": "6a6929be",
    "metadata": {
     "hide-output": false
    },
@@ -304,7 +305,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64815af5",
+   "id": "0c15e42e",
    "metadata": {},
    "source": [
     "The following function computes a v-greedy policy."
@@ -313,7 +314,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "868e6aa9",
+   "id": "a6049e46",
    "metadata": {
     "hide-output": false
    },
@@ -328,7 +329,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62c08a38",
+   "id": "88a33e01",
    "metadata": {},
    "source": [
     "Define the $ \\sigma $-policy operator."
@@ -337,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ca0a146",
+   "id": "cb0c5cf4",
    "metadata": {
     "hide-output": false
    },
@@ -372,7 +373,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f747fefe",
+   "id": "4eeba7d3",
    "metadata": {},
    "source": [
     "Next, we want to computes the lifetime value of following policy $ \\sigma $.\n",
@@ -411,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b7c6471",
+   "id": "75f1b6a3",
    "metadata": {
     "hide-output": false
    },
@@ -440,7 +441,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0cd0c333",
+   "id": "f3dd261c",
    "metadata": {},
    "source": [
     "Now we can define a function to compute $ v_{\\sigma} $"
@@ -449,7 +450,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0be51c4",
+   "id": "d13f114a",
    "metadata": {
     "hide-output": false
    },
@@ -474,7 +475,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9c06978",
+   "id": "1bcb4527",
    "metadata": {},
    "source": [
     "We use successive approximation for VFI."
@@ -483,7 +484,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d22216c0",
+   "id": "2e953ff6",
    "metadata": {
     "hide-output": false
    },
@@ -511,7 +512,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e626873d",
+   "id": "e9e38f1e",
    "metadata": {},
    "source": [
     "For OPI we’ll add a compiled routine that computes $ T_σ^m v $."
@@ -520,7 +521,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b8a6d4e",
+   "id": "31e8c885",
    "metadata": {
     "hide-output": false
    },
@@ -541,7 +542,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "abf1b131",
+   "id": "fbe7d087",
    "metadata": {},
    "source": [
     "Finally, we introduce the solvers that implement VFI, HPI and OPI."
@@ -550,7 +551,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32075f17",
+   "id": "b4ec7366",
    "metadata": {
     "hide-output": false
    },
@@ -569,7 +570,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b330a758",
+   "id": "4f37feca",
    "metadata": {},
    "source": [
     "For OPI we will use a compiled JAX `lax.while_loop` operation to speed execution."
@@ -578,7 +579,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16b147ce",
+   "id": "e0cefa68",
    "metadata": {
     "hide-output": false
    },
@@ -616,7 +617,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc892f78",
+   "id": "84cd1520",
    "metadata": {},
    "source": [
     "Here’s a friendly interface to OPI"
@@ -625,7 +626,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf837542",
+   "id": "0b729716",
    "metadata": {
     "hide-output": false
    },
@@ -639,7 +640,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "02cd2a14",
+   "id": "ad2bc1ee",
    "metadata": {},
    "source": [
     "Here’s HPI"
@@ -648,7 +649,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a8c950d",
+   "id": "b735c1da",
    "metadata": {
     "hide-output": false
    },
@@ -674,7 +675,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0cb7d99",
+   "id": "e557e7a1",
    "metadata": {
     "hide-output": false
    },
@@ -690,23 +691,36 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ef3ddcf",
+   "id": "5500b7b3",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
     "print(\"Starting HPI.\")\n",
-    "qe.tic()\n",
-    "σ_star_hpi = howard_policy_iteration(model)\n",
-    "elapsed = qe.toc()\n",
+    "%time σ_star_hpi = howard_policy_iteration(model).block_until_ready()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "31cdda8c",
+   "metadata": {
+    "hide-output": false
+   },
+   "outputs": [],
+   "source": [
+    "# Now time it without compile time\n",
+    "start = time()\n",
+    "σ_star_hpi = howard_policy_iteration(model).block_until_ready()\n",
+    "hpi_without_compile = time() - start\n",
     "print(σ_star_hpi)\n",
-    "print(f\"HPI completed in {elapsed} seconds.\")"
+    "print(f\"HPI completed in {hpi_without_compile} seconds.\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "60d39f24",
+   "id": "93df86a0",
    "metadata": {},
    "source": [
     "Here’s the plot of the Howard policy, as a function of $ y $ at the highest and lowest values of $ z $."
@@ -715,7 +729,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "98eb414e",
+   "id": "384fa717",
    "metadata": {
     "hide-output": false
    },
@@ -732,23 +746,36 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c5383b3c",
+   "id": "ca18ef41",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
     "print(\"Starting VFI.\")\n",
-    "qe.tic()\n",
-    "σ_star_vfi = value_function_iteration(model)\n",
-    "elapsed = qe.toc()\n",
+    "%time σ_star_vfi = value_function_iteration(model).block_until_ready()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "611ca337",
+   "metadata": {
+    "hide-output": false
+   },
+   "outputs": [],
+   "source": [
+    "# Now time it without compile time\n",
+    "start = time()\n",
+    "σ_star_vfi = value_function_iteration(model).block_until_ready()\n",
+    "vfi_without_compile = time() - start\n",
     "print(σ_star_vfi)\n",
-    "print(f\"VFI completed in {elapsed} seconds.\")"
+    "print(f\"VFI completed in {vfi_without_compile} seconds.\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7f9f6ff0",
+   "id": "c2ea3dec",
    "metadata": {},
    "source": [
     "Here’s the plot of the VFI, as a function of $ y $ at the highest and lowest values of $ z $."
@@ -757,7 +784,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50bdbe21",
+   "id": "ea3e97c0",
    "metadata": {
     "hide-output": false
    },
@@ -774,23 +801,36 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc9d174c",
+   "id": "37a839ae",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
     "print(\"Starting OPI.\")\n",
-    "qe.tic()\n",
-    "σ_star_opi = optimistic_policy_iteration(model, m=100)\n",
-    "elapsed = qe.toc()\n",
+    "%time σ_star_opi = optimistic_policy_iteration(model, m=100).block_until_ready()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7b595a01",
+   "metadata": {
+    "hide-output": false
+   },
+   "outputs": [],
+   "source": [
+    "# Now time it without compile time\n",
+    "start = time()\n",
+    "σ_star_opi = optimistic_policy_iteration(model, m=100).block_until_ready()\n",
+    "opi_without_compile = time() - start\n",
     "print(σ_star_opi)\n",
-    "print(f\"OPI completed in {elapsed} seconds.\")"
+    "print(f\"OPI completed in {opi_without_compile} seconds.\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "a8c96d53",
+   "id": "bd603510",
    "metadata": {},
    "source": [
     "Here’s the plot of the optimal policy, as a function of $ y $ at the highest and lowest values of $ z $."
@@ -799,7 +839,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13d8db66",
+   "id": "73f8bcc9",
    "metadata": {
     "hide-output": false
    },
@@ -815,7 +855,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "216bef3a",
+   "id": "3cfc9c13",
    "metadata": {},
    "source": [
     "We observe that all the solvers produce the same output from the above three plots.\n",
@@ -826,7 +866,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f375a449",
+   "id": "4c957adc",
    "metadata": {
     "hide-output": false
    },
@@ -838,39 +878,65 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67665de3",
+   "id": "aafa329e",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
     "print(\"Running Howard policy iteration.\")\n",
-    "qe.tic()\n",
-    "σ_pi = howard_policy_iteration(model)\n",
-    "pi_time = qe.toc()"
+    "%time σ_hpi = howard_policy_iteration(model).block_until_ready()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40f2f73a",
+   "id": "9733903a",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
-    "print(f\"PI completed in {pi_time} seconds.\")\n",
-    "print(\"Running value function iteration.\")\n",
-    "qe.tic()\n",
-    "σ_vfi = value_function_iteration(model, tol=1e-5)\n",
-    "vfi_time = qe.toc()\n",
-    "print(f\"VFI completed in {vfi_time} seconds.\")"
+    "# Now time it without compile time\n",
+    "start = time()\n",
+    "σ_hpi = howard_policy_iteration(model).block_until_ready()\n",
+    "hpi_without_compile = time() - start\n",
+    "print(f\"HPI completed in {hpi_without_compile} seconds.\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0acb5cb2",
+   "id": "34025429",
+   "metadata": {
+    "hide-output": false
+   },
+   "outputs": [],
+   "source": [
+    "print(\"Running value function iteration.\")\n",
+    "%time σ_vfi = value_function_iteration(model, tol=1e-5).block_until_ready()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5a7f84bf",
+   "metadata": {
+    "hide-output": false
+   },
+   "outputs": [],
+   "source": [
+    "# Now time it without compile time\n",
+    "start = time()\n",
+    "σ_vfi = value_function_iteration(model, tol=1e-5).block_until_ready()\n",
+    "vfi_without_compile = time() - start\n",
+    "print(f\"VFI completed in {vfi_without_compile} seconds.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18208a88",
    "metadata": {
     "hide-output": false
    },
@@ -879,26 +945,29 @@
     "opi_times = []\n",
     "for m in m_vals:\n",
     "    print(f\"Running optimistic policy iteration with m={m}.\")\n",
-    "    qe.tic()\n",
-    "    σ_opi = optimistic_policy_iteration(model, m=m, tol=1e-5)\n",
-    "    opi_time = qe.toc()\n",
-    "    print(f\"OPI with m={m} completed in {opi_time} seconds.\")\n",
-    "    opi_times.append(opi_time)"
+    "    σ_opi = optimistic_policy_iteration(model, m=m, tol=1e-5).block_until_ready()\n",
+    "\n",
+    "    # Now time it without compile time\n",
+    "    start = time()\n",
+    "    σ_opi = optimistic_policy_iteration(model, m=m, tol=1e-5).block_until_ready()\n",
+    "    opi_without_compile = time() - start\n",
+    "    print(f\"OPI with m={m} completed in {opi_without_compile} seconds.\")\n",
+    "    opi_times.append(opi_without_compile)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d9216cf",
+   "id": "c99b0e8a",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots(figsize=(9, 5))\n",
-    "ax.plot(m_vals, jnp.full(len(m_vals), pi_time),\n",
+    "ax.plot(m_vals, jnp.full(len(m_vals), hpi_without_compile),\n",
     "        lw=2, label=\"Howard policy iteration\")\n",
-    "ax.plot(m_vals, jnp.full(len(m_vals), vfi_time),\n",
+    "ax.plot(m_vals, jnp.full(len(m_vals), vfi_without_compile),\n",
     "        lw=2, label=\"value function iteration\")\n",
     "ax.plot(m_vals, opi_times, lw=2, label=\"optimistic policy iteration\")\n",
     "ax.legend(fontsize=12, frameon=False)\n",
@@ -909,7 +978,7 @@
   }
  ],
  "metadata": {
-  "date": 1715241420.8235414,
+  "date": 1718254771.3804193,
   "filename": "opt_invest.md",
   "kernelspec": {
    "display_name": "Python",
