--- a/opt_savings_2.ipynb
+++ b/opt_savings_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5b35f2d3",
+   "id": "05a23291",
    "metadata": {},
    "source": [
     "# Optimal Savings II: Alternative Algorithms"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "391643db",
+   "id": "a874288d",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -62,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "efe96681",
+   "id": "aa917818",
    "metadata": {
     "hide-output": false
    },
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d68c529b",
+   "id": "7d2bd459",
    "metadata": {},
    "source": [
     "We will use the following imports:"
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4cc2fb0",
+   "id": "40ebda53",
    "metadata": {
     "hide-output": false
    },
@@ -92,12 +92,12 @@
     "import jax\n",
     "import jax.numpy as jnp\n",
     "import matplotlib.pyplot as plt\n",
-    "import time"
+    "from time import time"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "28815a3c",
+   "id": "3aca756c",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running."
@@ -106,7 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "293a3d85",
+   "id": "70d37fe9",
    "metadata": {
     "hide-output": false
    },
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6377f485",
+   "id": "8f3eda4b",
    "metadata": {},
    "source": [
     "We’ll use 64 bit floats to gain extra precision."
@@ -126,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "584c6e6e",
+   "id": "fefd1a8d",
    "metadata": {
     "hide-output": false
    },
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0a493bb",
+   "id": "ae5e0475",
    "metadata": {},
    "source": [
     "## Model primitives\n",
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89e14b27",
+   "id": "54f90e90",
    "metadata": {
     "hide-output": false
    },
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe6f54f9",
+   "id": "d9d31eaa",
    "metadata": {},
    "source": [
     "Here’s the right hand side of the Bellman equation:"
@@ -189,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b99b29e",
+   "id": "f368b0cd",
    "metadata": {
     "hide-output": false
    },
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab614e14",
+   "id": "be61fb81",
    "metadata": {},
    "source": [
     "Now we successively apply `vmap` to vectorize $ B $ by simulating nested loops."
@@ -223,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ca4abe71",
+   "id": "00696f39",
    "metadata": {
     "hide-output": false
    },
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8853963",
+   "id": "333678cc",
    "metadata": {},
    "source": [
     "Here’s a fully vectorized version of $ B $."
@@ -245,7 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "694436ec",
+   "id": "652826a4",
    "metadata": {
     "hide-output": false
    },
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5086db6d",
+   "id": "d9cb870b",
    "metadata": {},
    "source": [
     "## Operators\n",
@@ -272,7 +272,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "903dd18a",
+   "id": "a317c030",
    "metadata": {
     "hide-output": false
    },
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb125c46",
+   "id": "309e1054",
    "metadata": {},
    "source": [
     "The next function computes a $ v $-greedy policy given $ v $"
@@ -296,7 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e382262c",
+   "id": "49d3bd95",
    "metadata": {
     "hide-output": false
    },
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6ee3545",
+   "id": "5cf00a64",
    "metadata": {},
    "source": [
     "We define a function to compute the current rewards $ r_\\sigma $ given policy $ \\sigma $,\n",
@@ -325,7 +325,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6608c92",
+   "id": "7e848080",
    "metadata": {
     "hide-output": false
    },
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ebe1a526",
+   "id": "82d194f8",
    "metadata": {},
    "source": [
     "Now we successively apply `vmap` to simulate nested loops."
@@ -362,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d1c8b2f4",
+   "id": "129bf396",
    "metadata": {
     "hide-output": false
    },
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c66bc866",
+   "id": "33ab22ec",
    "metadata": {},
    "source": [
     "Here’s a fully vectorized version of $ r_\\sigma $."
@@ -383,7 +383,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88ba9495",
+   "id": "192d87d5",
    "metadata": {
     "hide-output": false
    },
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3265c328",
+   "id": "5a198c11",
    "metadata": {},
    "source": [
     "Now we define the policy operator $ T_\\sigma $ going through similar steps"
@@ -408,7 +408,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ed4c947",
+   "id": "80435ce7",
    "metadata": {
     "hide-output": false
    },
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2e6c826",
+   "id": "378127e3",
    "metadata": {},
    "source": [
     "The function below computes the value $ v_\\sigma $ of following policy $ \\sigma $.\n",
@@ -480,7 +480,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b6fc3b8",
+   "id": "eb4e3176",
    "metadata": {
     "hide-output": false
    },
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05ef2df8",
+   "id": "e4d63101",
    "metadata": {},
    "source": [
     "Now we can define a function to compute $ v_{\\sigma} $"
@@ -521,7 +521,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33457e91",
+   "id": "36a29555",
    "metadata": {
     "hide-output": false
    },
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb8d74d9",
+   "id": "0177cb3d",
    "metadata": {},
    "source": [
     "## Iteration\n",
@@ -558,7 +558,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec511941",
+   "id": "b2685367",
    "metadata": {
     "hide-output": false
    },
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "efe649bc",
+   "id": "21355aa3",
    "metadata": {},
    "source": [
     "For OPI we’ll add a compiled routine that computes $ T_σ^m v $."
@@ -597,7 +597,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "382f4936",
+   "id": "48707bb9",
    "metadata": {
     "hide-output": false
    },
@@ -618,7 +618,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ca44185",
+   "id": "22847958",
    "metadata": {},
    "source": [
     "## Solvers\n",
@@ -631,7 +631,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e4e234dd",
+   "id": "8953c40b",
    "metadata": {
     "hide-output": false
    },
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1787cd23",
+   "id": "730c74a2",
    "metadata": {},
    "source": [
     "For OPI we will use a compiled JAX `lax.while_loop` operation to speed execution."
@@ -659,7 +659,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12fb80cf",
+   "id": "721c020e",
    "metadata": {
     "hide-output": false
    },
@@ -697,7 +697,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2738bf17",
+   "id": "6ef1cf07",
    "metadata": {},
    "source": [
     "Here’s a friendly interface to OPI"
@@ -706,7 +706,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e269ecaa",
+   "id": "719abe5e",
    "metadata": {
     "hide-output": false
    },
@@ -720,7 +720,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e13ab42b",
+   "id": "12500191",
    "metadata": {},
    "source": [
     "Here’s HPI."
@@ -729,7 +729,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c79bbab2",
+   "id": "8ab80d12",
    "metadata": {
     "hide-output": false
    },
@@ -754,7 +754,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "278224fa",
+   "id": "80f528a9",
    "metadata": {},
    "source": [
     "## Tests\n",
@@ -765,7 +765,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ffe2ada",
+   "id": "c82c1e6e",
    "metadata": {
     "hide-output": false
    },
@@ -782,23 +782,46 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04097f38",
+   "id": "10cfcbf6",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
     "print(\"Starting HPI.\")\n",
-    "start_time = time.time()\n",
-    "σ_star_hpi = howard_policy_iteration(model)\n",
-    "elapsed = time.time() - start_time\n",
-    "print(f\"HPI completed in {elapsed} seconds.\")"
+    "start = time()\n",
+    "σ_star_hpi = howard_policy_iteration(model).block_until_ready()\n",
+    "hpi_with_compile = time() - start\n",
+    "print(f\"HPI completed in {hpi_with_compile} seconds.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ebee5e94",
+   "metadata": {},
+   "source": [
+    "We run it again to get rid of compile time."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e4267201",
+   "id": "bcba238d",
+   "metadata": {
+    "hide-output": false
+   },
+   "outputs": [],
+   "source": [
+    "start = time()\n",
+    "σ_star_hpi = howard_policy_iteration(model).block_until_ready()\n",
+    "hpi_without_compile = time() - start\n",
+    "print(f\"HPI completed in {hpi_without_compile} seconds.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e6a27e87",
    "metadata": {
     "hide-output": false
    },
@@ -815,23 +838,46 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e629c199",
+   "id": "cce5e151",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
     "print(\"Starting VFI.\")\n",
-    "start_time = time.time()\n",
-    "σ_star_vfi = value_function_iteration(model)\n",
-    "elapsed = time.time() - start_time\n",
-    "print(f\"VFI completed in {elapsed} seconds.\")"
+    "start = time()\n",
+    "σ_star_vfi = value_function_iteration(model).block_until_ready()\n",
+    "vfi_with_compile = time() - start\n",
+    "print(f\"VFI completed in {vfi_with_compile} seconds.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "53353955",
+   "metadata": {},
+   "source": [
+    "We run it again to eliminate compile time."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f149408",
+   "id": "b5f303f5",
+   "metadata": {
+    "hide-output": false
+   },
+   "outputs": [],
+   "source": [
+    "start = time()\n",
+    "σ_star_vfi = value_function_iteration(model).block_until_ready()\n",
+    "vfi_without_compile = time() - start\n",
+    "print(f\"VFI completed in {vfi_without_compile} seconds.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c851be23",
    "metadata": {
     "hide-output": false
    },
@@ -848,23 +894,46 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9993e55f",
+   "id": "70bd0615",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
     "print(\"Starting OPI.\")\n",
-    "start_time = time.time()\n",
-    "σ_star_opi = optimistic_policy_iteration(model, m=100)\n",
-    "elapsed = time.time() - start_time\n",
-    "print(f\"OPI completed in {elapsed} seconds.\")"
+    "start = time()\n",
+    "σ_star_opi = optimistic_policy_iteration(model, m=100).block_until_ready()\n",
+    "opi_with_compile = time() - start\n",
+    "print(f\"OPI completed in {opi_with_compile} seconds.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c11ab7c7",
+   "metadata": {},
+   "source": [
+    "Let’s run it again to get rid of compile time."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21b95877",
+   "id": "f36a70db",
+   "metadata": {
+    "hide-output": false
+   },
+   "outputs": [],
+   "source": [
+    "start = time()\n",
+    "σ_star_opi = optimistic_policy_iteration(model, m=100).block_until_ready()\n",
+    "opi_without_compile = time() - start\n",
+    "print(f\"OPI completed in {opi_without_compile} seconds.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ff887db6",
    "metadata": {
     "hide-output": false
    },
@@ -880,7 +949,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c796efd",
+   "id": "29b0e0cd",
    "metadata": {},
    "source": [
     "We observe that all the solvers produce the same output from the above three plots.\n",
@@ -891,33 +960,45 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0c38b1a",
+   "id": "af4c3d57",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
     "def run_algorithm(algorithm, model, **kwargs):\n",
-    "    start_time = time.time()\n",
     "    result = algorithm(model, **kwargs)\n",
-    "    end_time = time.time()\n",
-    "    elapsed_time = end_time - start_time\n",
-    "    print(f\"{algorithm.__name__} completed in {elapsed_time:.2f} seconds.\")\n",
-    "    return result, elapsed_time"
+    "\n",
+    "    # Now time it without compile time\n",
+    "    start = time()\n",
+    "    result = algorithm(model, **kwargs).block_until_ready()\n",
+    "    algorithm_without_compile = time() - start\n",
+    "    print(f\"{algorithm.__name__} completed in {algorithm_without_compile:.2f} seconds.\")\n",
+    "    return result, algorithm_without_compile"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bbad2140",
+   "id": "750b2f31",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
     "σ_pi, pi_time = run_algorithm(howard_policy_iteration, model)\n",
-    "σ_vfi, vfi_time = run_algorithm(value_function_iteration, model, tol=1e-5)\n",
-    "\n",
+    "σ_vfi, vfi_time = run_algorithm(value_function_iteration, model, tol=1e-5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "402be3e3",
+   "metadata": {
+    "hide-output": false
+   },
+   "outputs": [],
+   "source": [
     "m_vals = range(5, 600, 40)\n",
     "opi_times = []\n",
     "for m in m_vals:\n",
@@ -929,7 +1010,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f5d857e",
+   "id": "73013ceb",
    "metadata": {
     "hide-output": false
    },
@@ -937,10 +1018,10 @@
    "source": [
     "fig, ax = plt.subplots()\n",
     "ax.plot(m_vals, \n",
-    "        jnp.full(len(m_vals), pi_time), \n",
+    "        jnp.full(len(m_vals), hpi_without_compile), \n",
     "        lw=2, label=\"Howard policy iteration\")\n",
     "ax.plot(m_vals, \n",
-    "        jnp.full(len(m_vals), vfi_time), \n",
+    "        jnp.full(len(m_vals), vfi_without_compile), \n",
     "        lw=2, label=\"value function iteration\")\n",
     "ax.plot(m_vals, opi_times, \n",
     "        lw=2, label=\"optimistic policy iteration\")\n",
@@ -952,7 +1033,7 @@
   }
  ],
  "metadata": {
-  "date": 1715241420.8995318,
+  "date": 1718254771.4396,
   "filename": "opt_savings_2.md",
   "kernelspec": {
    "display_name": "Python",
