--- a/overborrowing.ipynb
+++ b/overborrowing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5ce65961",
+   "id": "360e2d8a",
    "metadata": {},
    "source": [
     "# Bianchi Overborrowing Model"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1656bd2d",
+   "id": "ad3cb59c",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "360fd9c8",
+   "id": "7e34d84c",
    "metadata": {
     "hide-output": false
    },
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82bc7be7",
+   "id": "4755e8a2",
    "metadata": {},
    "source": [
     "We use the following imports."
@@ -49,13 +49,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "02e2ce01",
+   "id": "9e697e53",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
-    "import time\n",
     "import jax\n",
     "import numba\n",
     "import jax.numpy as jnp\n",
@@ -64,12 +63,13 @@
     "import quantecon as qe\n",
     "import scipy as sp\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn"
+    "import seaborn\n",
+    "from time import time"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "787ba478",
+   "id": "5d91cad2",
    "metadata": {},
    "source": [
     "## Description of the model\n",
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51c0e12b",
+   "id": "5613b0f2",
    "metadata": {},
    "source": [
     "### Decentralized equilibrium\n",
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aaa5fd0e",
+   "id": "a9fb780a",
    "metadata": {},
    "source": [
     "### Notation\n",
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12e9e991",
+   "id": "670f60c3",
    "metadata": {},
    "source": [
     "### Constrained planner\n",
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19c0d1b4",
+   "id": "b08ff846",
    "metadata": {},
    "source": [
     "## Markov dynamics\n",
@@ -279,7 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6303eb18",
+   "id": "b5b13517",
    "metadata": {
     "hide-output": false
    },
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2e493f3",
+   "id": "67056038",
    "metadata": {},
    "source": [
     "We’ll store the data in $ \\Omega $ using its square root:"
@@ -302,7 +302,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3fe3a60b",
+   "id": "72974e16",
    "metadata": {
     "hide-output": false
    },
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "919a5829",
+   "id": "74e6c0f5",
    "metadata": {},
    "source": [
     "Here’s a function to convert the VAR process to a Markov chain evolving on a\n",
@@ -326,7 +326,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1569862b",
+   "id": "031375eb",
    "metadata": {
     "hide-output": false
    },
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d766042",
+   "id": "4560b0a3",
    "metadata": {},
    "source": [
     "Here’s code for sampling from the Markov chain."
@@ -376,7 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "570e9a41",
+   "id": "05513cd7",
    "metadata": {
     "hide-output": false
    },
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf3aa74d",
+   "id": "5b386ada",
    "metadata": {},
    "source": [
     "Here’s code for generating the original VAR process, which can be used for\n",
@@ -419,7 +419,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f6731c8",
+   "id": "d6334b10",
    "metadata": {
     "hide-output": false
    },
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8709c22",
+   "id": "578c4893",
    "metadata": {},
    "source": [
     "Let’s check some statistics for both the original and the discretized processes."
@@ -451,7 +451,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b55a096",
+   "id": "ef489df0",
    "metadata": {
     "hide-output": false
    },
@@ -466,7 +466,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9aebf49f",
+   "id": "8a15d2da",
    "metadata": {
     "hide-output": false
    },
@@ -484,7 +484,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "767af994",
+   "id": "d8a69993",
    "metadata": {
     "hide-output": false
    },
@@ -497,7 +497,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d1d5ccae",
+   "id": "41d59ba6",
    "metadata": {
     "hide-output": false
    },
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66a892ea",
+   "id": "fd16dd20",
    "metadata": {},
    "source": [
     "## Overborrowing Model\n",
@@ -540,7 +540,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "470171e3",
+   "id": "3e657a4b",
    "metadata": {
     "hide-output": false
    },
@@ -584,7 +584,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "163f6756",
+   "id": "1783c1d9",
    "metadata": {},
    "source": [
     "Here’s flow utility."
@@ -593,7 +593,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29b52ee7",
+   "id": "7b4c636c",
    "metadata": {
     "hide-output": false
    },
@@ -616,7 +616,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0d35176",
+   "id": "d6740d0e",
    "metadata": {},
    "source": [
     "We need code to generate an initial guess of $ H $."
@@ -625,7 +625,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2dfc1141",
+   "id": "08a3c512",
    "metadata": {
     "hide-output": false
    },
@@ -646,7 +646,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea32a26e",
+   "id": "35bb0e19",
    "metadata": {
     "hide-output": false
    },
@@ -657,7 +657,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "125ebec7",
+   "id": "097ee35e",
    "metadata": {},
    "source": [
     "We need to construct the Bellman operator for the household.\n",
@@ -668,7 +668,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e7ab3bb7",
+   "id": "b0352d02",
    "metadata": {
     "hide-output": false
    },
@@ -709,7 +709,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "712d204a",
+   "id": "48546b1d",
    "metadata": {},
    "source": [
     "Let’s now vectorize and jit-compile this map."
@@ -718,7 +718,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "deb2f42e",
+   "id": "9f2aad34",
    "metadata": {
     "hide-output": false
    },
@@ -739,7 +739,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b407ba2",
+   "id": "6a4e7fc1",
    "metadata": {},
    "source": [
     "Now we can set up the Bellman operator by maximizing over the choice variable\n",
@@ -749,7 +749,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8a7452a",
+   "id": "f9e01808",
    "metadata": {
     "hide-output": false
    },
@@ -777,7 +777,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41366fd5",
+   "id": "e9e820ca",
    "metadata": {
     "hide-output": false
    },
@@ -788,7 +788,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66132088",
+   "id": "540c823d",
    "metadata": {},
    "source": [
     "Here’s a function that computes a greedy policy (best response to $ v $)."
@@ -797,7 +797,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "683f122a",
+   "id": "29ac191e",
    "metadata": {
     "hide-output": false
    },
@@ -826,7 +826,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad83fcfc",
+   "id": "15f3c42b",
    "metadata": {
     "hide-output": false
    },
@@ -837,7 +837,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb7a2a5f",
+   "id": "6ae51ea0",
    "metadata": {},
    "source": [
     "Here’s some code for value function iteration (VFI)."
@@ -846,7 +846,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f09182e3",
+   "id": "7d146d2d",
    "metadata": {
     "hide-output": false
    },
@@ -879,7 +879,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92155b79",
+   "id": "d57826f6",
    "metadata": {},
    "source": [
     "This is how we update our guess of $ H $, using the current policy $ b' $\n",
@@ -889,7 +889,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e9c33fd",
+   "id": "d945b4a9",
    "metadata": {
     "hide-output": false
    },
@@ -922,7 +922,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b55edb6d",
+   "id": "6aa17814",
    "metadata": {
     "hide-output": false
    },
@@ -933,7 +933,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85c48918",
+   "id": "ee1c2333",
    "metadata": {},
    "source": [
     "Now we can write code to compute an equilibrium law of motion $ H $."
@@ -942,7 +942,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2dd23fe3",
+   "id": "5967e286",
    "metadata": {
     "hide-output": false
    },
@@ -973,7 +973,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b2e52a9",
+   "id": "110b89e0",
    "metadata": {},
    "source": [
     "## Planner problem\n",
@@ -986,7 +986,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81e237e4",
+   "id": "b159248e",
    "metadata": {
     "hide-output": false
    },
@@ -1023,7 +1023,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e28e1b38",
+   "id": "a7d2164a",
    "metadata": {
     "hide-output": false
    },
@@ -1042,7 +1042,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1fd7b424",
+   "id": "0f5ff87a",
    "metadata": {},
    "source": [
     "Now we construct the Bellman operator."
@@ -1051,7 +1051,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6bff4097",
+   "id": "8a5422ea",
    "metadata": {
     "hide-output": false
    },
@@ -1071,7 +1071,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b512015",
+   "id": "ed3162cd",
    "metadata": {
     "hide-output": false
    },
@@ -1082,7 +1082,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8731ec75",
+   "id": "6a1ed2f2",
    "metadata": {},
    "source": [
     "Here’s a function that computes a greedy policy (best response to $ v $)."
@@ -1091,7 +1091,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a9a8b824",
+   "id": "ebdc78fc",
    "metadata": {
     "hide-output": false
    },
@@ -1111,7 +1111,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20f53994",
+   "id": "d00849bb",
    "metadata": {
     "hide-output": false
    },
@@ -1122,7 +1122,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb39c977",
+   "id": "8aa276de",
    "metadata": {},
    "source": [
     "Computing the planner solution is straightforward value function iteration:"
@@ -1131,7 +1131,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41f27a90",
+   "id": "5c2f553e",
    "metadata": {
     "hide-output": false
    },
@@ -1155,7 +1155,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd21b775",
+   "id": "0b482ce1",
    "metadata": {},
    "source": [
     "## Numerical solution\n",
@@ -1165,7 +1165,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "266eeeda",
+   "id": "d313b50b",
    "metadata": {},
    "source": [
     "### Generating solutions\n",
@@ -1176,7 +1176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f024078a",
+   "id": "cb4f2441",
    "metadata": {
     "hide-output": false
    },
@@ -1191,40 +1191,84 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d28354e",
+   "id": "f4e120a4",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
     "print(\"Computing decentralized solution.\")\n",
-    "in_time = time.time()\n",
+    "start = time()\n",
     "H_eq = compute_equilibrium(parameters, sizes, arrays)\n",
-    "out_time = time.time()\n",
-    "diff = out_time - in_time\n",
-    "print(f\"Computed decentralized equilibrium in {diff} seconds\")"
+    "diff_d_with_compile = time() - start\n",
+    "print(f\"Computed decentralized equilibrium in {diff_d_with_compile} seconds\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b8c0f16a",
+   "metadata": {},
+   "source": [
+    "We run it again to get rid of compile time."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e631139",
+   "id": "d893120b",
+   "metadata": {
+    "hide-output": false
+   },
+   "outputs": [],
+   "source": [
+    "start = time()\n",
+    "H_eq = compute_equilibrium(parameters, sizes, arrays)\n",
+    "diff_d_without_compile  = time() - start\n",
+    "print(f\"Computed decentralized equilibrium in {diff_d_without_compile} seconds\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "db883508",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
     "print(\"Computing planner's solution.\")\n",
-    "in_time = time.time()\n",
+    "start = time()\n",
     "planner_v, H_plan, vfi_num_iter = compute_planner_solution(model)\n",
-    "out_time = time.time()\n",
-    "diff = out_time - in_time\n",
-    "print(f\"Computed decentralized equilibrium in {diff} seconds\")"
+    "diff_p_with_compile = time() - start\n",
+    "print(f\"Computed planner's equilibrium in {diff_p_with_compile} seconds\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "29285b23",
+   "id": "f8ddb10a",
+   "metadata": {},
+   "source": [
+    "We run it again to eliminate compile time."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b73c1760",
+   "metadata": {
+    "hide-output": false
+   },
+   "outputs": [],
+   "source": [
+    "start = time()\n",
+    "planner_v, H_plan, vfi_num_iter = compute_planner_solution(model)\n",
+    "diff_p_without_compile = time() - start\n",
+    "print(f\"Computed planner's equilibrium in {diff_p_without_compile} seconds\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5db59448",
    "metadata": {},
    "source": [
     "### Policy plots\n",
@@ -1235,7 +1279,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eacc10c9",
+   "id": "33db1973",
    "metadata": {
     "hide-output": false
    },
@@ -1258,7 +1302,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2cfce41a",
+   "id": "ae00471a",
    "metadata": {},
    "source": [
     "The match is not exact because we use a different estimate of the Markov\n",
@@ -1269,7 +1313,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90f689b7",
+   "id": "5ef05dbf",
    "metadata": {},
    "source": [
     "## Exercise"
@@ -1277,10 +1321,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05d5e246",
+   "id": "042a24b3",
    "metadata": {},
    "source": [
-    "## Exercise 20.1\n",
+    "## Exercise 19.1\n",
     "\n",
     "Your task is to examine the ergodic distribution of borrowing in the decentralized and\n",
     "planner equilibria.\n",
@@ -1295,7 +1339,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50a533ff",
+   "id": "48e66005",
    "metadata": {
     "hide-output": false
    },
@@ -1321,7 +1365,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b1f1c8d",
+   "id": "4059cea5",
    "metadata": {},
    "source": [
     "Note that you will have to convert JAX arrays into NumPy arrays if you want to use this function.\n",
@@ -1340,16 +1384,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba8e7056",
+   "id": "bf56921f",
    "metadata": {},
    "source": [
-    "## Solution to[ Exercise 20.1](https://jax.quantecon.org/#overborrow_1)"
+    "## Solution to[ Exercise 19.1](https://jax.quantecon.org/#overborrow_1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00637d9f",
+   "id": "6a2ddd26",
    "metadata": {
     "hide-output": false
    },
@@ -1362,7 +1406,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d897175",
+   "id": "cbfaa9e0",
    "metadata": {},
    "source": [
     "We convert JAX arrays to NumPy arrays in order to use Numba."
@@ -1371,7 +1415,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dcf4b364",
+   "id": "14ea499f",
    "metadata": {
     "hide-output": false
    },
@@ -1383,7 +1427,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bde99aa9",
+   "id": "d095fd71",
    "metadata": {},
    "source": [
     "Now let’s compute borrowing for the decentralized equilibrium and the planner."
@@ -1392,7 +1436,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37ee9722",
+   "id": "fe61acb0",
    "metadata": {
     "hide-output": false
    },
@@ -1406,7 +1450,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "02eb0712",
+   "id": "8135ad7d",
    "metadata": {},
    "source": [
     "We suppress some annoying warnings produced by the current version of `seaborn`"
@@ -1415,7 +1459,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9e39b35",
+   "id": "0c17a643",
    "metadata": {
     "hide-output": false
    },
@@ -1427,7 +1471,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe98f275",
+   "id": "57fe43b9",
    "metadata": {},
    "source": [
     "Now let’s plot the distributions using a kernel density estimator."
@@ -1436,7 +1480,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82926336",
+   "id": "48819523",
    "metadata": {
     "hide-output": false
    },
@@ -1454,7 +1498,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3cfe3d5b",
+   "id": "881f59cc",
    "metadata": {},
    "source": [
     "This corresponds to Figure 2 in [[Bianchi, 2011](https://jax.quantecon.org/zreferences.html#id256)].\n",
@@ -1467,7 +1511,7 @@
   }
  ],
  "metadata": {
-  "date": 1715241420.955622,
+  "date": 1718254771.4808726,
   "filename": "overborrowing.md",
   "kernelspec": {
    "display_name": "Python",
