--- a/short_path.ipynb
+++ b/short_path.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ff29da68",
+   "id": "5ad8771a",
    "metadata": {},
    "source": [
     "# Shortest Paths"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e118a179",
+   "id": "2e3771ff",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5aea430",
+   "id": "1fbcacbb",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28758653",
+   "id": "2e7a208e",
    "metadata": {
     "hide-output": false
    },
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6789844",
+   "id": "ff58771c",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50a9e3ef",
+   "id": "488e7a44",
    "metadata": {
     "hide-output": false
    },
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b5d23c9f",
+   "id": "1c494c72",
    "metadata": {},
    "source": [
     "## Solving for Minimum Cost-to-Go\n",
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91a318a8",
+   "id": "5dad4064",
    "metadata": {},
    "source": [
     "### The Algorithm\n",
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf5579a7",
+   "id": "22a9df98",
    "metadata": {
     "hide-output": false
    },
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca2c7a12",
+   "id": "58942bff",
    "metadata": {},
    "source": [
     "Notice that the cost of staying still (on the principle diagonal) is set to\n",
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c1324d3",
+   "id": "93ecec38",
    "metadata": {
     "hide-output": false
    },
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e6526e7",
+   "id": "0533912a",
    "metadata": {},
    "source": [
     "We can further optimize the above code by using [jax.lax.while_loop](https://jax.readthedocs.io/en/latest/_autosummary/jax.lax.while_loop.html). The extra acceleration is due to the fact that the entire operation can be optimized by the JAX compiler and launched as a single kernel on the GPU."
@@ -186,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb028dd3",
+   "id": "60369052",
    "metadata": {
     "hide-output": false
    },
@@ -200,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b0fa7f9",
+   "id": "00e2c653",
    "metadata": {
     "hide-output": false
    },
@@ -221,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f42e8bca",
+   "id": "36d8bd28",
    "metadata": {
     "hide-output": false
    },
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "55b0860f",
+   "id": "3deaa584",
    "metadata": {},
    "source": [
     "Let’s see the timing for JIT compilation of the functions and runtime results."
@@ -243,20 +243,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87c462a9",
+   "id": "19df5044",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
     "%%time\n",
-    "\n",
-    "jax.lax.while_loop(cond_fun, body_fun, init_val=(0, J, False))[1]"
+    "jax.lax.while_loop(cond_fun, body_fun, init_val=(0, J, False))[1].block_until_ready()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "f1702dc7",
+   "id": "ad817a42",
    "metadata": {},
    "source": [
     "Now, this runs faster once we have the JIT compiled JAX version of the functions."
@@ -265,20 +264,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39dd4554",
+   "id": "ce16328d",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
     "%%time\n",
-    "\n",
-    "jax.lax.while_loop(cond_fun, body_fun, init_val=(0, J, False))[1]"
+    "jax.lax.while_loop(cond_fun, body_fun, init_val=(0, J, False))[1].block_until_ready()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "578c219b",
+   "id": "add88525",
    "metadata": {},
    "source": [
     ">**Note**\n",
@@ -288,7 +286,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79a4abfa",
+   "id": "31bc0611",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -296,7 +294,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85095a81",
+   "id": "31093003",
    "metadata": {},
    "source": [
     "## Exercise 12.1\n",
@@ -320,7 +318,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "08d04ea3",
+   "id": "1f968ac1",
    "metadata": {
     "hide-output": false
    },
@@ -431,7 +429,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb7917eb",
+   "id": "eace00a0",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 12.1](https://jax.quantecon.org/#short_path_ex1)\n",
@@ -442,7 +440,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1586d3de",
+   "id": "57a2c20b",
    "metadata": {
     "hide-output": false
    },
@@ -472,7 +470,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54a9d081",
+   "id": "967e9f32",
    "metadata": {},
    "source": [
     "Let’s write a function `compute_cost_to_go` that returns $ J $ given any valid $ Q $."
@@ -481,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30785654",
+   "id": "4da34051",
    "metadata": {
     "hide-output": false
    },
@@ -515,7 +513,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69bf577f",
+   "id": "82654996",
    "metadata": {},
    "source": [
     "Finally, here’s a function that uses the `cost-to-go` function to obtain the\n",
@@ -525,7 +523,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8603fa78",
+   "id": "a61c7ed6",
    "metadata": {
     "hide-output": false
    },
@@ -546,7 +544,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ada10811",
+   "id": "496d4ef7",
    "metadata": {},
    "source": [
     "Okay, now we have the necessary functions, let’s call them to do the job we were assigned."
@@ -555,7 +553,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc2610d3",
+   "id": "bdb72cb4",
    "metadata": {
     "hide-output": false
    },
@@ -566,7 +564,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2ff29e7",
+   "id": "d020e8d8",
    "metadata": {},
    "source": [
     "Let’s see the timings for jitting the function and runtime results."
@@ -575,21 +573,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a1968c4",
-   "metadata": {
-    "hide-output": false
-   },
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "\n",
-    "J = compute_cost_to_go(Q).block_until_ready()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "17e75ef0",
+   "id": "923f67dd",
    "metadata": {
     "hide-output": false
    },
@@ -600,9 +584,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3efb0836",
+   "metadata": {},
+   "source": [
+    "Let’s run again to eliminate compile time."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e90011dd",
+   "id": "dd3f1452",
+   "metadata": {
+    "hide-output": false
+   },
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "J = compute_cost_to_go(Q).block_until_ready()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c51ecd4c",
    "metadata": {
     "hide-output": false
    },
@@ -613,7 +618,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc3b0c6b",
+   "id": "b5626e6c",
    "metadata": {},
    "source": [
     "The total cost of the path should agree with $ J[0] $ so let’s check this."
@@ -622,7 +627,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e45c3a0",
+   "id": "88ece9ae",
    "metadata": {
     "hide-output": false
    },
@@ -633,7 +638,7 @@
   }
  ],
  "metadata": {
-  "date": 1715241421.1205153,
+  "date": 1718254771.6251183,
   "filename": "short_path.md",
   "kernelspec": {
    "display_name": "Python",
