--- a/troubleshooting.ipynb
+++ b/troubleshooting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3521c224",
+   "id": "be17c2cd",
    "metadata": {},
    "source": [
     "\n",
@@ -11,35 +11,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cffc313a",
+   "id": "b2208c6a",
    "metadata": {},
    "source": [
-    "# Troubleshooting"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "990a2b6b",
-   "metadata": {},
-   "source": [
-    "## Contents\n",
+    "# Troubleshooting\n",
     "\n",
-    "- [Troubleshooting](#Troubleshooting)  \n",
-    "  - [Fixing Your Local Environment](#Fixing-Your-Local-Environment)  \n",
-    "  - [Reporting an Issue](#Reporting-an-Issue)  "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4660ca23",
-   "metadata": {},
-   "source": [
     "This page is for readers experiencing errors when running the code from the lectures."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "5b7d1246",
+   "id": "ad2d6303",
    "metadata": {},
    "source": [
     "## Fixing Your Local Environment\n",
@@ -81,7 +63,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4df9cfd",
+   "id": "a1247bf2",
    "metadata": {},
    "source": [
     "## Reporting an Issue\n",
@@ -98,7 +80,7 @@
   }
  ],
  "metadata": {
-  "date": 1715241421.1486387,
+  "date": 1718254771.643505,
   "filename": "troubleshooting.md",
   "kernelspec": {
    "display_name": "Python",
