--- a/ifp_egm.ipynb
+++ b/ifp_egm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "441d7a72",
+   "id": "20156b98",
    "metadata": {},
    "source": [
     "# Endogenous Grid Method"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37686e86",
+   "id": "3b2dc360",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db6bad11",
+   "id": "ba7bddc6",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b4b50eb",
+   "id": "8e6e8b15",
    "metadata": {
     "hide-output": false
    },
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bba12599",
+   "id": "f3513a19",
    "metadata": {
     "hide-output": false
    },
@@ -66,12 +66,13 @@
     "import numpy as np\n",
     "import jax\n",
     "import jax.numpy as jnp\n",
-    "import numba"
+    "import numba\n",
+    "from time import time"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b5fbbc94",
+   "id": "0961605b",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -80,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d62b797",
+   "id": "c1baccea",
    "metadata": {
     "hide-output": false
    },
@@ -91,7 +92,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6467de7d",
+   "id": "c3b22f3e",
    "metadata": {},
    "source": [
     "We use 64 bit floating point numbers for extra precision."
@@ -100,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd89ec31",
+   "id": "1b5022e8",
    "metadata": {
     "hide-output": false
    },
@@ -111,7 +112,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "efb47401",
+   "id": "87dbd4ed",
    "metadata": {},
    "source": [
     "## Setup\n",
@@ -157,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a2e8581",
+   "id": "a2fc949e",
    "metadata": {
     "hide-output": false
    },
@@ -189,7 +190,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b771232",
+   "id": "a6791a3b",
    "metadata": {},
    "source": [
     "## Solution method\n",
@@ -211,7 +212,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad31b008",
+   "id": "758344ae",
    "metadata": {},
    "source": [
     "### Euler equation\n",
@@ -380,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0fe9dbbe",
+   "id": "d901b3b1",
    "metadata": {},
    "source": [
     "### JAX version\n",
@@ -396,7 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ae94b22",
+   "id": "f440cf3f",
    "metadata": {
     "hide-output": false
    },
@@ -452,7 +453,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4304c6f9",
+   "id": "a136df4c",
    "metadata": {},
    "source": [
     "Then we use `jax.jit` to compile $ K $.\n",
@@ -463,7 +464,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44e5c8b5",
+   "id": "a622a66a",
    "metadata": {
     "hide-output": false
    },
@@ -474,7 +475,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f295f06",
+   "id": "c5165ce5",
    "metadata": {},
    "source": [
     "Next we define a successive approximator that repeatedly applies $ K $."
@@ -483,7 +484,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d7fc6fd2",
+   "id": "f57271b5",
    "metadata": {
     "hide-output": false
    },
@@ -528,7 +529,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "021880db",
+   "id": "adf02477",
    "metadata": {},
    "source": [
     "### Numba version\n",
@@ -545,7 +546,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42cc5e04",
+   "id": "b8eebd86",
    "metadata": {
     "hide-output": false
    },
@@ -594,7 +595,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "990af392",
+   "id": "30789803",
    "metadata": {
     "hide-output": false
    },
@@ -640,7 +641,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f306136",
+   "id": "13d8c890",
    "metadata": {},
    "source": [
     "## Solutions\n",
@@ -652,7 +653,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3494ed2",
+   "id": "4edf2cd1",
    "metadata": {},
    "source": [
     "### Outputs"
@@ -661,7 +662,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1cc38de6",
+   "id": "b24481bc",
    "metadata": {
     "hide-output": false
    },
@@ -672,7 +673,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cea26d29",
+   "id": "fa651bc4",
    "metadata": {},
    "source": [
     "Here’s a first run of the JAX code."
@@ -681,19 +682,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db4f5eef",
+   "id": "d44b03d3",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
+    "%%time\n",
     "a_star_egm_jax, σ_star_egm_jax = successive_approx_jax(model,\n",
-    "                                                       print_skip=100)"
+    "                                        print_skip=1000)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "413a049c",
+   "id": "ba200e45",
    "metadata": {},
    "source": [
     "Next let’s solve the same IFP with Numba."
@@ -702,21 +704,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aeb608cd",
+   "id": "c6d75f4a",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
-    "qe.tic()\n",
+    "%%time\n",
     "a_star_egm_nb, σ_star_egm_nb = successive_approx_numba(model,\n",
-    "                                                        print_skip=100)\n",
-    "qe.toc()"
+    "                                    print_skip=1000)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c2dee012",
+   "id": "0845724e",
    "metadata": {},
    "source": [
     "Now let’s check the outputs in a plot to make sure they are the same."
@@ -725,7 +726,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "990d8cd8",
+   "id": "be0ec519",
    "metadata": {
     "hide-output": false
    },
@@ -755,59 +756,61 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8b1b92b",
+   "id": "04b31be1",
    "metadata": {},
    "source": [
     "### Timing\n",
     "\n",
-    "Now let’s compare execution time of the two methods"
+    "Now let’s compare execution time of the two methods."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "428e0263",
+   "id": "d1ef79b6",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
-    "qe.tic()\n",
+    "start = time()\n",
     "a_star_egm_jax, σ_star_egm_jax = successive_approx_jax(model,\n",
     "                                         print_skip=1000)\n",
-    "jax_time = qe.toc()"
+    "jax_time_without_compile = time() - start\n",
+    "print(\"Jax execution time = \", jax_time_without_compile)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a691b86",
+   "id": "202538b6",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
-    "qe.tic()\n",
+    "start = time()\n",
     "a_star_egm_nb, σ_star_egm_nb = successive_approx_numba(model,\n",
     "                                         print_skip=1000)\n",
-    "numba_time = qe.toc()"
+    "numba_time_without_compile = time() - start\n",
+    "print(\"Numba execution time = \", numba_time_without_compile)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e5473db",
+   "id": "1711978c",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
-    "jax_time / numba_time"
+    "jax_time_without_compile / numba_time_without_compile"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "f1593c6e",
+   "id": "ff94d379",
    "metadata": {},
    "source": [
     "The JAX code is significantly faster, as expected.\n",
@@ -818,7 +821,7 @@
   }
  ],
  "metadata": {
-  "date": 1715241420.2446718,
+  "date": 1718254770.939456,
   "filename": "ifp_egm.md",
   "kernelspec": {
    "display_name": "Python",
