--- a/markov_asset.ipynb
+++ b/markov_asset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "cb7fd74f",
+   "id": "637b6c7a",
    "metadata": {},
    "source": [
     "# An Asset Pricing Problem"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5b8ea7a",
+   "id": "392d7cb1",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7888000f",
+   "id": "8e1fd3cd",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b6dbe64",
+   "id": "aa5b4abd",
    "metadata": {
     "hide-output": false
    },
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a326e03",
+   "id": "161a4363",
    "metadata": {},
    "source": [
     "In addition to JAX and Anaconda, this lecture will need the following libraries:"
@@ -71,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85e6308d",
+   "id": "8b9213e8",
    "metadata": {
     "hide-output": false
    },
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6206faac",
+   "id": "e7af6178",
    "metadata": {},
    "source": [
     "Below we use the following imports"
@@ -91,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd963fb7",
+   "id": "b1809a58",
    "metadata": {
     "hide-output": false
    },
@@ -103,12 +103,13 @@
     "import numpy as np\n",
     "import jax\n",
     "import jax.numpy as jnp\n",
-    "from collections import namedtuple"
+    "from collections import namedtuple\n",
+    "from time import time"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "6946d745",
+   "id": "eb953705",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase precision."
@@ -117,7 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8fd68edd",
+   "id": "4628f8a3",
    "metadata": {
     "hide-output": false
    },
@@ -128,7 +129,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "366bfa89",
+   "id": "ad7887a9",
    "metadata": {},
    "source": [
     "## Pricing a single payoff\n",
@@ -180,7 +181,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c6973e1",
+   "id": "f9916af0",
    "metadata": {},
    "source": [
     "## Pricing a cash flow\n",
@@ -238,7 +239,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ae50cdb",
+   "id": "93166a6f",
    "metadata": {},
    "source": [
     "## Choosing the stochastic discount factor\n",
@@ -281,7 +282,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26d786bf",
+   "id": "60bbd9a2",
    "metadata": {},
    "source": [
     "## Solving for the price-dividend ratio\n",
@@ -449,7 +450,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a97b3271",
+   "id": "c6952645",
    "metadata": {},
    "source": [
     "## Code\n",
@@ -462,7 +463,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "088b5c2b",
+   "id": "4df96d04",
    "metadata": {
     "hide-output": false
    },
@@ -496,7 +497,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d8c299c",
+   "id": "15ffc663",
    "metadata": {},
    "source": [
     "The next function verifies that the spectral radius of a given matrix is $ < 1 $."
@@ -505,7 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38a67139",
+   "id": "56f53747",
    "metadata": {
     "hide-output": false
    },
@@ -521,7 +522,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "075c4c23",
+   "id": "006ead42",
    "metadata": {},
    "source": [
     "In what follows we assume that $ \\{X_t\\} $, the state process, is a discretization of the AR(1) process\n",
@@ -540,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95185a88",
+   "id": "c5317a71",
    "metadata": {
     "hide-output": false
    },
@@ -570,7 +571,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51eeabcb",
+   "id": "18563b7a",
    "metadata": {},
    "source": [
     "Our first step is to construct the matrix $ K $ defined in [(8.15)](#equation-eq-ntecxdk).\n",
@@ -581,7 +582,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bafa42d5",
+   "id": "4b30e3e3",
    "metadata": {
     "hide-output": false
    },
@@ -602,7 +603,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7a2fbb7",
+   "id": "c94a2954",
    "metadata": {},
    "source": [
     "To exploit the parallelization capabilities of JAX, let’s also write a vectorized (i.e., loop-free) implementation."
@@ -611,7 +612,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "616f637d",
+   "id": "8fb4637d",
    "metadata": {
     "hide-output": false
    },
@@ -631,7 +632,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c83b67f1",
+   "id": "a7888eaf",
    "metadata": {},
    "source": [
     "These two functions produce the same output:"
@@ -640,7 +641,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79c74e15",
+   "id": "913c1b1c",
    "metadata": {
     "hide-output": false
    },
@@ -654,7 +655,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "abf0cdaf",
+   "id": "f03ceb54",
    "metadata": {},
    "source": [
     "Now we can compute the price-dividend ratio:"
@@ -663,7 +664,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f4d7ad9",
+   "id": "62251c25",
    "metadata": {
     "hide-output": false
    },
@@ -700,7 +701,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6977395",
+   "id": "ae79d6a0",
    "metadata": {},
    "source": [
     "Here’s a plot of $ v $ as a function of the state for several values of $ \\gamma $."
@@ -709,7 +710,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e56d1a03",
+   "id": "5cdf76d3",
    "metadata": {
     "hide-output": false
    },
@@ -734,7 +735,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1bad5c16",
+   "id": "02c4903e",
    "metadata": {},
    "source": [
     "Notice that $ v $ is decreasing in each case.\n",
@@ -747,7 +748,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4929988",
+   "id": "fa4cedb7",
    "metadata": {},
    "source": [
     "## An Extended Example\n",
@@ -893,7 +894,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b057c89",
+   "id": "ce039696",
    "metadata": {},
    "source": [
     "## Numpy Version\n",
@@ -914,7 +915,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5062ad22",
+   "id": "c6af6200",
    "metadata": {
     "hide-output": false
    },
@@ -959,7 +960,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5120718f",
+   "id": "98b2e0c0",
    "metadata": {},
    "source": [
     "Now we provide a function to compute the matrix $ A $."
@@ -968,7 +969,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e99b9eb",
+   "id": "2a2c1a53",
    "metadata": {
     "hide-output": false
    },
@@ -997,7 +998,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "00e8c4af",
+   "id": "e01c7456",
    "metadata": {},
    "source": [
     "Here’s our function to compute the price-dividend ratio for the stochastic volatility model."
@@ -1006,7 +1007,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76f1c4b9",
+   "id": "98e299a9",
    "metadata": {
     "hide-output": false
    },
@@ -1049,7 +1050,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45dadec9",
+   "id": "264f4979",
    "metadata": {},
    "source": [
     "Let’s create an instance of the model and solve it."
@@ -1058,7 +1059,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1799e53b",
+   "id": "02764222",
    "metadata": {
     "hide-output": false
    },
@@ -1069,22 +1070,54 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "54101f2d",
+   "metadata": {},
+   "source": [
+    "Let’s run it to compile."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28f1c7c7",
+   "id": "c5444a57",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
-    "qe.tic()\n",
+    "start = time()\n",
     "v = sv_pd_ratio(sv_model)\n",
-    "np_time = qe.toc()"
+    "numpy_with_compile = time() - start\n",
+    "print(\"Numpy compile plus execution time = \", numpy_with_compile)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "e747f586",
+   "id": "fab59260",
+   "metadata": {},
+   "source": [
+    "Let’s run it again to remove the compile."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c7e12e77",
+   "metadata": {
+    "hide-output": false
+   },
+   "outputs": [],
+   "source": [
+    "start = time()\n",
+    "v = sv_pd_ratio(sv_model)\n",
+    "numpy_without_compile = time() - start\n",
+    "print(\"Numpy execution time = \", numpy_without_compile)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d1fba736",
    "metadata": {},
    "source": [
     "Here are some plots of the solution $ v $ along the three dimensions."
@@ -1093,7 +1126,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20843c75",
+   "id": "afd1f67b",
    "metadata": {
     "hide-output": false
    },
@@ -1110,7 +1143,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "455b0060",
+   "id": "9cf339de",
    "metadata": {
     "hide-output": false
    },
@@ -1127,7 +1160,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a069e622",
+   "id": "7a0af208",
    "metadata": {
     "hide-output": false
    },
@@ -1143,7 +1176,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e76d5c7f",
+   "id": "af79d00b",
    "metadata": {},
    "source": [
     "## JAX Version\n",
@@ -1156,7 +1189,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e890cf6e",
+   "id": "5d99c455",
    "metadata": {
     "hide-output": false
    },
@@ -1180,7 +1213,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "621e5d05",
+   "id": "217a3bd7",
    "metadata": {},
    "source": [
     "Here’s a function to compute $ A $.\n",
@@ -1193,7 +1226,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b18041e",
+   "id": "77d23d51",
    "metadata": {
     "hide-output": false
    },
@@ -1222,7 +1255,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5226754c",
+   "id": "9bd8ddeb",
    "metadata": {},
    "source": [
     "Here’s the function that computes the solution."
@@ -1231,7 +1264,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0cbb0780",
+   "id": "d10f702e",
    "metadata": {
     "hide-output": false
    },
@@ -1270,7 +1303,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30955c8a",
+   "id": "bca57d38",
    "metadata": {},
    "source": [
     "Now let’s target these functions for JIT-compilation, while using `static_argnums` to indicate that the function will need to be recompiled when `shapes` changes."
@@ -1279,7 +1312,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "446ae6b1",
+   "id": "25cfe4cb",
    "metadata": {
     "hide-output": false
    },
@@ -1292,7 +1325,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3813da53",
+   "id": "7061ab41",
    "metadata": {
     "hide-output": false
    },
@@ -1306,7 +1339,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86b7ad4e",
+   "id": "c3045841",
    "metadata": {},
    "source": [
     "Let’s see how long it takes to run with compile time included."
@@ -1315,20 +1348,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40caa61b",
+   "id": "527a0786",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
-    "qe.tic()\n",
+    "start = time()\n",
     "v_jax = sv_pd_ratio_jax(sv_model_jax, shapes).block_until_ready()\n",
-    "jnp_time_0 = qe.toc()"
+    "jnp_with_compile = time() - start\n",
+    "print(\"JAX compile plus execution time = \", jnp_with_compile)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "46918951",
+   "id": "769359a7",
    "metadata": {},
    "source": [
     "And now let’s see without compile time."
@@ -1337,20 +1371,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13c7d662",
+   "id": "035e98c6",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
-    "qe.tic()\n",
+    "start = time()\n",
     "v_jax = sv_pd_ratio_jax(sv_model_jax, shapes).block_until_ready()\n",
-    "jnp_time = qe.toc()"
+    "jnp_without_compile = time() - start\n",
+    "print(\"JAX execution time = \", jnp_without_compile)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "fb1bf134",
+   "id": "aec674d8",
    "metadata": {},
    "source": [
     "Here’s the ratio of times:"
@@ -1359,18 +1394,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "09a93a71",
+   "id": "0ade7be6",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
-    "jnp_time / np_time"
+    "jnp_without_compile / numpy_without_compile"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "bf9d4c45",
+   "id": "a9fd866d",
    "metadata": {},
    "source": [
     "Let’s check that the NumPy and JAX versions realize the same solution."
@@ -1379,7 +1414,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44425816",
+   "id": "0487fc45",
    "metadata": {
     "hide-output": false
    },
@@ -1392,7 +1427,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a22dcfc",
+   "id": "9f51311c",
    "metadata": {},
    "source": [
     "## A memory-efficient JAX version\n",
@@ -1409,7 +1444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4126ba9c",
+   "id": "8631e8c7",
    "metadata": {
     "hide-output": false
    },
@@ -1437,7 +1472,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc42f0fb",
+   "id": "a98a03bc",
    "metadata": {},
    "source": [
     "Now we write a version of the solution function for the price-dividend ratio\n",
@@ -1447,7 +1482,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b04f9054",
+   "id": "d69a2bae",
    "metadata": {
     "hide-output": false
    },
@@ -1469,7 +1504,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e89324d2",
+   "id": "70c7df80",
    "metadata": {},
    "source": [
     "Let’s target these functions for JIT compilation."
@@ -1478,7 +1513,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67713236",
+   "id": "7f147555",
    "metadata": {
     "hide-output": false
    },
@@ -1490,7 +1525,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a4b43d3",
+   "id": "13a9ca7e",
    "metadata": {},
    "source": [
     "Let’s time the solution with compile time included."
@@ -1499,20 +1534,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "05dfaf67",
+   "id": "085dd071",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
-    "qe.tic()\n",
+    "start = time()\n",
     "v_jax_linop = sv_pd_ratio_linop(sv_model, shapes).block_until_ready()\n",
-    "jnp_time_linop_0 = qe.toc()"
+    "jnp_linop_with_compile = time() - start\n",
+    "print(\"JAX compile plus execution time = \", jnp_linop_with_compile)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0944d737",
+   "id": "4564937d",
    "metadata": {},
    "source": [
     "And now let’s see without compile time."
@@ -1521,20 +1557,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6fce47d0",
+   "id": "49566f29",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
-    "qe.tic()\n",
+    "start = time()\n",
     "v_jax_linop = sv_pd_ratio_linop(sv_model, shapes).block_until_ready()\n",
-    "jnp_linop_time = qe.toc()"
+    "jnp_linop_without_compile = time() - start\n",
+    "print(\"JAX execution time = \", jnp_linop_without_compile)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "3df9bf90",
+   "id": "2c6c8191",
    "metadata": {},
    "source": [
     "Let’s verify the solution again:"
@@ -1543,7 +1580,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ef51534",
+   "id": "3121e6d1",
    "metadata": {
     "hide-output": false
    },
@@ -1554,7 +1591,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "818767cc",
+   "id": "dd32170d",
    "metadata": {},
    "source": [
     "Here’s the ratio of times between memory-efficient and direct version:"
@@ -1563,18 +1600,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b9c0c17",
+   "id": "fcbe5316",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
-    "jnp_linop_time / jnp_time"
+    "jnp_linop_without_compile / jnp_without_compile"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7ab3efdd",
+   "id": "00ac2a2b",
    "metadata": {},
    "source": [
     "The speed is somewhat faster and, moreover, we can now work with much larger grids.\n",
@@ -1585,7 +1622,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "372f20d7",
+   "id": "1ed000c5",
    "metadata": {
     "hide-output": false
    },
@@ -1596,14 +1633,13 @@
     "P, hc_grid, Q, hd_grid, R, z_grid, β, γ, bar_σ, μ_c, μ_d = sv_model_jax\n",
     "shapes = len(hc_grid), len(hd_grid), len(z_grid)\n",
     "\n",
-    "qe.tic()\n",
-    "_ = sv_pd_ratio_linop(sv_model, shapes).block_until_ready()\n",
-    "qe.toc()"
+    "%time _ = sv_pd_ratio_linop(sv_model_jax, shapes).block_until_ready()\n",
+    "%time _ = sv_pd_ratio_linop(sv_model_jax, shapes).block_until_ready()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "55f3ab51",
+   "id": "18959fc9",
    "metadata": {},
    "source": [
     "The solution is computed relatively quickly and without memory issues.\n",
@@ -1614,7 +1650,7 @@
   }
  ],
  "metadata": {
-  "date": 1715241420.7139907,
+  "date": 1718254771.2999284,
   "filename": "markov_asset.md",
   "kernelspec": {
    "display_name": "Python",
