--- a/opt_savings_1.ipynb
+++ b/opt_savings_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d6775e9a",
+   "id": "6a22f071",
    "metadata": {},
    "source": [
     "# Optimal Savings I: Value Function Iteration"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67236f8c",
+   "id": "1ca94a30",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22dc620f",
+   "id": "588defb8",
    "metadata": {
     "hide-output": false
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0cc11215",
+   "id": "45a18871",
    "metadata": {},
    "source": [
     "We will use the following imports:"
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f37097bb",
+   "id": "6df30fee",
    "metadata": {
     "hide-output": false
    },
@@ -57,14 +57,14 @@
     "import numpy as np\n",
     "import jax\n",
     "import jax.numpy as jnp\n",
-    "from collections import namedtuple\n",
     "import matplotlib.pyplot as plt\n",
-    "import time"
+    "from collections import namedtuple\n",
+    "from time import time"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "97c2a760",
+   "id": "a3496a54",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da9febc0",
+   "id": "e3599bcc",
    "metadata": {
     "hide-output": false
    },
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc5ee3ed",
+   "id": "49e9d4c7",
    "metadata": {},
    "source": [
     "We’ll use 64 bit floats to gain extra precision."
@@ -93,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6df43b63",
+   "id": "7f3f46e8",
    "metadata": {
     "hide-output": false
    },
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8cfc26df",
+   "id": "1bf406a7",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9b6f833",
+   "id": "05932b42",
    "metadata": {},
    "source": [
     "## Starting with NumPy\n",
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce588f8d",
+   "id": "bc6ee348",
    "metadata": {},
    "source": [
     "### Functions and operators\n",
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9aa857fe",
+   "id": "35ab9ce2",
    "metadata": {
     "hide-output": false
    },
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "254dc323",
+   "id": "e48b35d3",
    "metadata": {},
    "source": [
     "(The function returns sizes of arrays because we use them later to help\n",
@@ -224,7 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33bfcc7d",
+   "id": "1f4c7aa3",
    "metadata": {
     "hide-output": false
    },
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8ec110f",
+   "id": "55a40b01",
    "metadata": {},
    "source": [
     "Here are two functions we need for value function iteration.\n",
@@ -276,7 +276,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52481754",
+   "id": "167160ed",
    "metadata": {
     "hide-output": false
    },
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0596e3d",
+   "id": "b09c396e",
    "metadata": {},
    "source": [
     "### Value function iteration\n",
@@ -304,7 +304,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c449b1df",
+   "id": "33d5c1d8",
    "metadata": {
     "hide-output": false
    },
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34e4a691",
+   "id": "98872381",
    "metadata": {},
    "source": [
     "Now we create an instance, unpack it, and test how long it takes to solve the\n",
@@ -334,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e6a190b8",
+   "id": "777476b0",
    "metadata": {
     "hide-output": false
    },
@@ -345,18 +345,51 @@
     "params, sizes, arrays = model\n",
     "β, R, γ = params\n",
     "w_size, y_size = sizes\n",
-    "w_grid, y_grid, Q = arrays\n",
-    "\n",
+    "w_grid, y_grid, Q = arrays"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cafa1826",
+   "metadata": {
+    "hide-output": false
+   },
+   "outputs": [],
+   "source": [
     "print(\"Starting VFI.\")\n",
-    "start_time = time.time()\n",
+    "start = time()\n",
     "v_star, σ_star = value_function_iteration(model)\n",
-    "numpy_elapsed = time.time() - start_time\n",
-    "print(f\"VFI completed in {numpy_elapsed} seconds.\")"
+    "numpy_with_compile = time() - start\n",
+    "print(f\"VFI completed in {numpy_with_compile} seconds.\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b9d76519",
+   "id": "d59c674e",
+   "metadata": {},
+   "source": [
+    "Let’s run it again to eliminate compile time."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3f3898bc",
+   "metadata": {
+    "hide-output": false
+   },
+   "outputs": [],
+   "source": [
+    "start = time()\n",
+    "v_star, σ_star = value_function_iteration(model)\n",
+    "numpy_without_compile = time() - start\n",
+    "print(f\"VFI completed in {numpy_without_compile} seconds.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c7149edc",
    "metadata": {},
    "source": [
     "Here’s a plot of the policy function."
@@ -365,7 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "816ab4c2",
+   "id": "893dd64d",
    "metadata": {
     "hide-output": false
    },
@@ -381,7 +414,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a32c330",
+   "id": "7c30cbdb",
    "metadata": {},
    "source": [
     "## Switching to JAX\n",
@@ -392,7 +425,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90b076e2",
+   "id": "d70858dd",
    "metadata": {},
    "source": [
     "### Functions and operators\n",
@@ -406,7 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "451ec944",
+   "id": "2f10f99c",
    "metadata": {
     "hide-output": false
    },
@@ -432,7 +465,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1773e66",
+   "id": "b57f2a82",
    "metadata": {},
    "source": [
     "The right hand side of the Bellman equation is the same as the NumPy version\n",
@@ -442,7 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba75811d",
+   "id": "50136cdb",
    "metadata": {
     "hide-output": false
    },
@@ -480,7 +513,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c7b4bc9",
+   "id": "ce1a4ea6",
    "metadata": {},
    "source": [
     "Some readers might be concerned that we are creating high dimensional arrays,\n",
@@ -495,7 +528,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f14b70dc",
+   "id": "8935a884",
    "metadata": {
     "hide-output": false
    },
@@ -506,7 +539,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "afdff6c0",
+   "id": "46c75c75",
    "metadata": {},
    "source": [
     "In the call above, we indicate to the compiler that `sizes` is static, so the\n",
@@ -518,7 +551,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25899483",
+   "id": "989e285d",
    "metadata": {
     "hide-output": false
    },
@@ -533,7 +566,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7bfdac5",
+   "id": "8cd151ee",
    "metadata": {},
    "source": [
     "The next function computes a $ v $-greedy policy given $ v $ (i.e., the policy that\n",
@@ -543,7 +576,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ddff01fc",
+   "id": "43d0e6e4",
    "metadata": {
     "hide-output": false
    },
@@ -558,7 +591,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53921b0f",
+   "id": "1c85a5cc",
    "metadata": {},
    "source": [
     "### Successive approximation\n",
@@ -579,7 +612,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "431cddc6",
+   "id": "42d60de5",
    "metadata": {
     "hide-output": false
    },
@@ -609,7 +642,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2eeb2e0e",
+   "id": "0b80e167",
    "metadata": {},
    "source": [
     "Our value function iteration routine calls `successive_approx_jax` while passing\n",
@@ -619,7 +652,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c1778d5",
+   "id": "4a791342",
    "metadata": {
     "hide-output": false
    },
@@ -635,7 +668,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89356f41",
+   "id": "0f3d45d4",
    "metadata": {},
    "source": [
     "### Timing\n",
@@ -646,7 +679,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c5238bc",
+   "id": "4f5f74a1",
    "metadata": {
     "hide-output": false
    },
@@ -662,7 +695,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f924eaf",
+   "id": "14397e9b",
    "metadata": {},
    "source": [
     "Let’s see how long it takes to solve this model."
@@ -671,22 +704,45 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c20b2dd0",
+   "id": "e8aeb4d7",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
     "print(\"Starting VFI using vectorization.\")\n",
-    "start_time = time.time()\n",
+    "start = time()\n",
     "v_star_jax, σ_star_jax = value_function_iteration(model)\n",
-    "jax_elapsed = time.time() - start_time\n",
-    "print(f\"VFI completed in {jax_elapsed} seconds.\")"
+    "jax_with_compile = time() - start\n",
+    "print(f\"VFI completed in {jax_with_compile} seconds.\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "8568ae22",
+   "id": "796bd6e7",
+   "metadata": {},
+   "source": [
+    "Let’s run it again to eliminate compile time."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6652de40",
+   "metadata": {
+    "hide-output": false
+   },
+   "outputs": [],
+   "source": [
+    "start = time()\n",
+    "v_star_jax, σ_star_jax = value_function_iteration(model)\n",
+    "jax_without_compile = time() - start\n",
+    "print(f\"VFI completed in {jax_without_compile} seconds.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "85efd920",
    "metadata": {},
    "source": [
     "The relative speed gain is"
@@ -695,18 +751,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc9a2a36",
+   "id": "59f240c8",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
-    "print(f\"Relative speed gain = {numpy_elapsed / jax_elapsed}\")"
+    "print(f\"Relative speed gain = {numpy_without_compile / jax_without_compile}\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "cbd6df9d",
+   "id": "38e45cb3",
    "metadata": {},
    "source": [
     "This is an impressive speed up and in fact we can do better still by switching\n",
@@ -717,7 +773,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f490735c",
+   "id": "8a57b66f",
    "metadata": {},
    "source": [
     "## Switching to vmap\n",
@@ -748,7 +804,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d21ad6cf",
+   "id": "9099caaa",
    "metadata": {
     "hide-output": false
    },
@@ -773,7 +829,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0788143",
+   "id": "f9e3bf24",
    "metadata": {},
    "source": [
     "Now we successively apply `vmap` to simulate nested loops."
@@ -782,7 +838,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c158a86",
+   "id": "f2a0c2e3",
    "metadata": {
     "hide-output": false
    },
@@ -795,7 +851,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a3a0c64",
+   "id": "fcc2bf33",
    "metadata": {},
    "source": [
     "Here’s the Bellman operator and the `get_greedy` functions for the `vmap` case."
@@ -804,7 +860,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49d98fec",
+   "id": "616a4c2c",
    "metadata": {
     "hide-output": false
    },
@@ -831,7 +887,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6186f3b8",
+   "id": "ba6b0863",
    "metadata": {},
    "source": [
     "Here’s the iteration routine."
@@ -840,7 +896,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b175d24",
+   "id": "5ee4909c",
    "metadata": {
     "hide-output": false
    },
@@ -856,7 +912,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26842293",
+   "id": "97603c8a",
    "metadata": {},
    "source": [
     "Let’s see how long it takes to solve the model using the `vmap` method."
@@ -865,22 +921,45 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa2db12f",
+   "id": "0366da3d",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
     "print(\"Starting VFI using vmap.\")\n",
-    "start_time = time.time()\n",
+    "start = time()\n",
     "v_star_vmap, σ_star_vmap = value_iteration_vmap(model)\n",
-    "jax_vmap_elapsed = time.time() - start_time\n",
-    "print(f\"VFI completed in {jax_vmap_elapsed} seconds.\")"
+    "jax_vmap_with_compile = time() - start\n",
+    "print(f\"VFI completed in {jax_vmap_with_compile} seconds.\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "5cf94c69",
+   "id": "81547e18",
+   "metadata": {},
+   "source": [
+    "Let’s run it again to get rid of compile time."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "66c8a5e5",
+   "metadata": {
+    "hide-output": false
+   },
+   "outputs": [],
+   "source": [
+    "start = time()\n",
+    "v_star_vmap, σ_star_vmap = value_iteration_vmap(model)\n",
+    "jax_vmap_without_compile = time() - start\n",
+    "print(f\"VFI completed in {jax_vmap_without_compile} seconds.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "93a380d9",
    "metadata": {},
    "source": [
     "We need to make sure that we got the same result."
@@ -889,7 +968,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7933646e",
+   "id": "aede26be",
    "metadata": {
     "hide-output": false
    },
@@ -901,7 +980,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9d5ee03",
+   "id": "d483df9b",
    "metadata": {},
    "source": [
     "Here’s the speed gain associated with switching from the NumPy version to JAX with `vmap`:"
@@ -910,18 +989,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d2214ec3",
+   "id": "782549ae",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
-    "print(f\"Relative speed = {numpy_elapsed / jax_vmap_elapsed}\")"
+    "print(f\"Relative speed = {numpy_without_compile/jax_vmap_without_compile}\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "65127a73",
+   "id": "59e54651",
    "metadata": {},
    "source": [
     "And here’s the comparison with the first JAX implementation (which used direct vectorization)."
@@ -930,18 +1009,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4642b28",
+   "id": "bdfda604",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
-    "print(f\"Relative speed = {jax_elapsed / jax_vmap_elapsed}\")"
+    "print(f\"Relative speed = {jax_without_compile / jax_vmap_without_compile}\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "687534dd",
+   "id": "6feef300",
    "metadata": {},
    "source": [
     "The execution times for the two JAX versions are relatively similar.\n",
@@ -953,7 +1032,7 @@
   }
  ],
  "metadata": {
-  "date": 1715241420.862199,
+  "date": 1718254771.410066,
   "filename": "opt_savings_1.md",
   "kernelspec": {
    "display_name": "Python",
