--- a/wealth_dynamics.ipynb
+++ b/wealth_dynamics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7520165b",
+   "id": "19df4021",
    "metadata": {},
    "source": [
     "# Wealth Distribution Dynamics"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c29eeaf2",
+   "id": "d48fab10",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57f319d7",
+   "id": "66e7f57b",
    "metadata": {
     "hide-output": false
    },
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "beef0da8",
+   "id": "b4accc70",
    "metadata": {},
    "source": [
     "We will use the following imports:"
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99ab0ba3",
+   "id": "57ff48cd",
    "metadata": {
     "hide-output": false
    },
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee7b3c25",
+   "id": "87ba5337",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -91,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b1f93f18",
+   "id": "df407047",
    "metadata": {
     "hide-output": false
    },
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c3d2f07",
+   "id": "c01b483a",
    "metadata": {},
    "source": [
     "## Wealth dynamics\n",
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "062f8ed6",
+   "id": "76821069",
    "metadata": {},
    "source": [
     "## Implementation"
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8ae558e",
+   "id": "129b9691",
    "metadata": {},
    "source": [
     "### Numba implementation\n",
@@ -182,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7da541f8",
+   "id": "8ccb9600",
    "metadata": {
     "hide-output": false
    },
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad6e85c0",
+   "id": "c5cf1c37",
    "metadata": {},
    "source": [
     "Here’s a function that generates the aggregate state process"
@@ -237,7 +237,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aba024d3",
+   "id": "447b357d",
    "metadata": {
     "hide-output": false
    },
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "02a09c5d",
+   "id": "a95a1a97",
    "metadata": {},
    "source": [
     "Here’s a function that updates household wealth by one period, taking the\n",
@@ -265,7 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd29b0d5",
+   "id": "e4d21d75",
    "metadata": {
     "hide-output": false
    },
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3fa58370",
+   "id": "dad2e020",
    "metadata": {},
    "source": [
     "Here’s a function to simulate the time series of wealth for an individual household"
@@ -298,7 +298,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96784b7f",
+   "id": "0e91ad80",
    "metadata": {
     "hide-output": false
    },
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5d01662",
+   "id": "a8e2a481",
    "metadata": {},
    "source": [
     "Let’s look at the wealth dynamics of an individual household"
@@ -335,7 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d43035fe",
+   "id": "8e4a6b6e",
    "metadata": {
     "hide-output": false
    },
@@ -352,7 +352,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4cdfc93",
+   "id": "2c940261",
    "metadata": {
     "hide-output": false
    },
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc488ad9",
+   "id": "ee163bd7",
    "metadata": {},
    "source": [
     "Notice the large spikes in wealth over time.\n",
@@ -381,7 +381,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e934503",
+   "id": "b347f6e1",
    "metadata": {
     "hide-output": false
    },
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "adc9cbe7",
+   "id": "5d8427c7",
    "metadata": {},
    "source": [
     "Parallelization works in the function above because the time path of each\n",
@@ -435,7 +435,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f600f56",
+   "id": "0bf13b1a",
    "metadata": {
     "hide-output": false
    },
@@ -447,15 +447,38 @@
     "z_sequence = generate_aggregate_state_sequence(aggregate_params,\n",
     "                                               length=sim_length)\n",
     "print(\"Generating cross-section using Numba\")\n",
-    "start_time = time()\n",
+    "start = time()\n",
     "ψ_star = update_cross_section(model, ψ_0, z_sequence)\n",
-    "numba_time = time() - start_time\n",
-    "print(f\"Generated cross-section in {numba_time} seconds.\\n\")"
+    "numba_with_compile = time() - start\n",
+    "print(f\"Generated cross-section in {numba_with_compile} seconds.\\n\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b9583941",
+   "id": "0e767874",
+   "metadata": {},
+   "source": [
+    "We run it again to eliminate compile time."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d779522",
+   "metadata": {
+    "hide-output": false
+   },
+   "outputs": [],
+   "source": [
+    "start = time()\n",
+    "ψ_star = update_cross_section(model, ψ_0, z_sequence)\n",
+    "numba_without_compile = time() - start\n",
+    "print(f\"Generated cross-section in {numba_without_compile} seconds.\\n\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fac8f279",
    "metadata": {},
    "source": [
     "### JAX implementation\n",
@@ -467,7 +490,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea83004c",
+   "id": "5c0ae980",
    "metadata": {
     "hide-output": false
    },
@@ -507,7 +530,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ada77398",
+   "id": "2286d4b0",
    "metadata": {},
    "source": [
     "Let’s see how long it takes to shift the cross-section of households forward\n",
@@ -517,7 +540,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d09d46d3",
+   "id": "353058ba",
    "metadata": {
     "hide-output": false
    },
@@ -534,7 +557,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cacdf13a",
+   "id": "f93e936a",
    "metadata": {
     "hide-output": false
    },
@@ -542,16 +565,16 @@
    "source": [
     "print(\"Generating cross-section using JAX\")\n",
     "key = jax.random.PRNGKey(1234)\n",
-    "start_time = time()\n",
-    "ψ_star = update_cross_section_jax(model, ψ_0, z_sequence, key)\n",
-    "jax_time = time() - start_time\n",
-    "print(f\"Generated cross-section in {jax_time} seconds.\\n\")"
+    "start = time()\n",
+    "ψ_star = update_cross_section_jax(model, ψ_0, z_sequence, key).block_until_ready()\n",
+    "jax_with_compile = time() - start\n",
+    "print(f\"Generated cross-section in {jax_with_compile} seconds.\\n\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28880fd1",
+   "id": "12d5d91b",
    "metadata": {
     "hide-output": false
    },
@@ -559,15 +582,15 @@
    "source": [
     "print(\"Repeating without compile time.\")\n",
     "key = jax.random.PRNGKey(1234)\n",
-    "start_time = time()\n",
-    "ψ_star = update_cross_section_jax(model, ψ_0, z_sequence, key)\n",
-    "jax_time = time() - start_time\n",
-    "print(f\"Generated cross-section in {jax_time} seconds\")"
+    "start = time()\n",
+    "ψ_star = update_cross_section_jax(model, ψ_0, z_sequence, key).block_until_ready()\n",
+    "jax_without_compile = time() - start\n",
+    "print(f\"Generated cross-section in {jax_without_compile} seconds\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d2a01e0f",
+   "id": "877b6497",
    "metadata": {},
    "source": [
     "And let’s see how long it takes if we compile the loop."
@@ -576,7 +599,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db8efe03",
+   "id": "a16fe5ca",
    "metadata": {
     "hide-output": false
    },
@@ -625,7 +648,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45681c3c",
+   "id": "4d66d344",
    "metadata": {
     "hide-output": false
    },
@@ -639,7 +662,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c28164f5",
+   "id": "f59988d8",
    "metadata": {
     "hide-output": false
    },
@@ -647,18 +670,18 @@
    "source": [
     "print(\"Generating cross-section using JAX with compiled loop\")\n",
     "key = jax.random.PRNGKey(1234)\n",
-    "start_time = time()\n",
+    "start = time()\n",
     "ψ_star = update_cross_section_jax_compiled(\n",
     "        model, ψ_0, num_households, z_sequence, key\n",
-    ")\n",
-    "jax_fori_time = time() - start_time\n",
-    "print(f\"Generated cross-section in {jax_fori_time} seconds.\\n\")"
+    ").block_until_ready()\n",
+    "jax_fori_with_compile = time() - start\n",
+    "print(f\"Generated cross-section in {jax_fori_with_compile} seconds.\\n\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a5fbc32",
+   "id": "78e8ee5f",
    "metadata": {
     "hide-output": false
    },
@@ -666,29 +689,29 @@
    "source": [
     "print(\"Repeating without compile time\")\n",
     "key = jax.random.PRNGKey(1234)\n",
-    "start_time = time()\n",
+    "start = time()\n",
     "ψ_star = update_cross_section_jax_compiled(\n",
     "        model, ψ_0, num_households, z_sequence, key\n",
-    ")\n",
-    "jax_fori_time = time() - start_time\n",
-    "print(f\"Generated cross-section in {jax_fori_time} seconds\")"
+    ").block_until_ready()\n",
+    "jax_fori_without_compile = time() - start\n",
+    "print(f\"Generated cross-section in {jax_fori_without_compile} seconds\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e25a3be9",
+   "id": "ad6d3ddd",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
-    "print(f\"JAX is {numba_time / jax_fori_time:.4f} times faster.\\n\")"
+    "print(f\"JAX is {numba_without_compile/jax_fori_without_compile:.4f} times faster.\\n\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "9bf4cee8",
+   "id": "b8f89826",
    "metadata": {},
    "source": [
     "### Pareto tails\n",
@@ -707,7 +730,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "730b04a8",
+   "id": "eca9be90",
    "metadata": {
     "hide-output": false
    },
@@ -730,7 +753,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79963cc6",
+   "id": "145af3f7",
    "metadata": {},
    "source": [
     "### Lorenz curves and Gini coefficients\n",
@@ -745,7 +768,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95af61cf",
+   "id": "15120986",
    "metadata": {},
    "source": [
     "#### Lorenz curve\n",
@@ -766,7 +789,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "175ce8a0",
+   "id": "d2c3c9b4",
    "metadata": {
     "hide-output": false
    },
@@ -785,7 +808,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d97c862f",
+   "id": "aa548fba",
    "metadata": {},
    "source": [
     "Let’s test"
@@ -794,7 +817,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c269cd1",
+   "id": "2baa88d2",
    "metadata": {
     "hide-output": false
    },
@@ -811,7 +834,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f0bb4bac",
+   "id": "d45c4287",
    "metadata": {
     "hide-output": false
    },
@@ -826,7 +849,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b9b85f7",
+   "id": "a178c51e",
    "metadata": {
     "hide-output": false
    },
@@ -838,19 +861,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d7039f1f",
+   "id": "08abb7bb",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
+    "# Now time it without compile time\n",
     "%time x, y = lorenz_curve_jax(ψ_star, num_households)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12f9fadc",
+   "id": "388a7c49",
    "metadata": {
     "hide-output": false
    },
@@ -865,7 +889,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4124ba69",
+   "id": "c15bab0e",
    "metadata": {},
    "source": [
     "#### Gini Coefficient\n",
@@ -887,7 +911,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3385138c",
+   "id": "7fa69c6f",
    "metadata": {
     "hide-output": false
    },
@@ -905,7 +929,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cda28174",
+   "id": "5111521a",
    "metadata": {
     "hide-output": false
    },
@@ -917,19 +941,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99fd8bfb",
+   "id": "1ff24c5d",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
-    "%time gini = gini_jax(ψ_star, num_households).block_until_ready()\n",
+    "# Now time it without compilation\n",
+    "%time gini = gini_jax(ψ_star, num_households).block_until_ready()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a033c05f",
+   "metadata": {
+    "hide-output": false
+   },
+   "outputs": [],
+   "source": [
     "gini"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "22e4d563",
+   "id": "729549a2",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -937,7 +973,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3f093a1",
+   "id": "09754690",
    "metadata": {},
    "source": [
     "## Exercise 6.1\n",
@@ -949,7 +985,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec657182",
+   "id": "2009b4f7",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 6.1](https://jax.quantecon.org/#wd_ex1)\n",
@@ -960,7 +996,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b987ff0e",
+   "id": "8a32374c",
    "metadata": {
     "hide-output": false
    },
@@ -981,32 +1017,43 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af731c72",
+   "id": "5cacc929",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
-    "%time gini = gini_jax_vmap(ψ_star).block_until_ready()\n",
-    "gini"
+    "%time gini = gini_jax_vmap(ψ_star).block_until_ready()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fde0cd51",
+   "id": "8fb9561e",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
-    "%time gini = gini_jax_vmap(ψ_star).block_until_ready()\n",
+    "# Now time it without compile time\n",
+    "%time gini = gini_jax_vmap(ψ_star).block_until_ready()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ec49d512",
+   "metadata": {
+    "hide-output": false
+   },
+   "outputs": [],
+   "source": [
     "gini"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "71820eb1",
+   "id": "c1dd578d",
    "metadata": {},
    "source": [
     "## Exercise 6.2\n",
@@ -1033,7 +1080,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e64546b9",
+   "id": "f5da8f9a",
    "metadata": {
     "hide-output": false
    },
@@ -1044,7 +1091,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d275b43",
+   "id": "f77eef24",
    "metadata": {},
    "source": [
     "Use the following as your initial cross-sectional distribution"
@@ -1053,7 +1100,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c30cdd5",
+   "id": "29d24302",
    "metadata": {
     "hide-output": false
    },
@@ -1065,7 +1112,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "690e1856",
+   "id": "534ea8be",
    "metadata": {},
    "source": [
     "Once you have done that, plot the Gini coefficients as well.\n",
@@ -1075,7 +1122,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12563e94",
+   "id": "653ed48e",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 6.2](https://jax.quantecon.org/#wd_ex2)\n",
@@ -1086,7 +1133,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0d7f348",
+   "id": "6bd83495",
    "metadata": {
     "hide-output": false
    },
@@ -1111,7 +1158,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1dc45a87",
+   "id": "ccd8b87a",
    "metadata": {},
    "source": [
     "The Lorenz curve shifts downwards as returns on financial income rise, indicating a rise in inequality.\n",
@@ -1122,7 +1169,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88a13d45",
+   "id": "4b36eb2b",
    "metadata": {
     "hide-output": false
    },
@@ -1137,7 +1184,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7754b96b",
+   "id": "512fad00",
    "metadata": {},
    "source": [
     "As expected, inequality increases as returns on financial income rise."
@@ -1145,7 +1192,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c74563a2",
+   "id": "148d3f58",
    "metadata": {},
    "source": [
     "## Exercise 6.3\n",
@@ -1158,7 +1205,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2814c8f",
+   "id": "cf192612",
    "metadata": {
     "hide-output": false
    },
@@ -1169,7 +1216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7843c467",
+   "id": "eb71da73",
    "metadata": {},
    "source": [
     "To isolate the role of volatility, set $ \\mu_r = - \\sigma_r^2 / 2 $ at each $ \\sigma_r $.\n",
@@ -1179,7 +1226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "219bc655",
+   "id": "cdfacf15",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 6.3](https://jax.quantecon.org/#wd_ex3)\n",
@@ -1190,7 +1237,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58097171",
+   "id": "c65cdeb7",
    "metadata": {
     "hide-output": false
    },
@@ -1217,7 +1264,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a1108ef",
+   "id": "b50eb531",
    "metadata": {
     "hide-output": false
    },
@@ -1232,7 +1279,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a4d23e1c",
+   "id": "a14e6e22",
    "metadata": {},
    "source": [
     "## Exercise 6.4\n",
@@ -1254,7 +1301,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01475c23",
+   "id": "3370d40e",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 6.4](https://jax.quantecon.org/#wd_ex4)\n",
@@ -1267,7 +1314,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8a40ae2",
+   "id": "39799722",
    "metadata": {
     "hide-output": false
    },
@@ -1306,7 +1353,7 @@
   }
  ],
  "metadata": {
-  "date": 1715241421.1959648,
+  "date": 1718254771.6775177,
   "filename": "wealth_dynamics.md",
   "kernelspec": {
    "display_name": "Python",
